--- a/01 君主国有多少种类？是用什么方法获得的？.md
+++ b/01 君主国有多少种类？是用什么方法获得的？.md
@@ -1,9 +1,7 @@
 # 01 君主国有多少种类？是用什么方法获得的？
 
-从古至今，统治国家、政权，不是共和国就是君主国。君主国不是世袭的就是新的。在世袭君主国里，长期以来君主的后裔就是那里的君主。新的君主国或者是全新的，如弗朗切斯科·斯福尔扎①的米兰公国；或者是世袭君主国占领的附庸，如西班牙王合并的那波利王国。②这样获得的领土，或者原来习惯在一个君主统治下生活，或者向来是自由的国家；而其获得，或者是依靠他人的武力或君主自己的武力，否则就是由于幸运或者由于能力。①
+> 从古至今，统治国家、政权，不是共和国就是君主国。君主国不是世袭的就是新的。在世袭君主国里，长期以来君主的后裔就是那里的君主。新的君主国或者是全新的，如弗朗切斯科·斯福尔扎①的米兰公国；或者是世袭君主国占领的附庸，如西班牙王合并的那波利王国。②这样获得的领土，或者原来习惯在一个君主统治下生活，或者向来是自由的国家；而其获得，或者是依靠他人的武力或君主自己的武力，否则就是由于幸运或者由于能力。
 
-①弗朗切斯科·斯福尔扎(FrancescoSforza，1401—1466)，其父为有名的雇佣军队长。弗朗切斯科十六岁即从军，1424年父死即继承其父    的军队指挥权，为米兰作战。其后娶米兰公爵菲利普·马利亚·维斯孔蒂(FilippoMariaVisconti)的私生女比昂卡(Bionca)。1447年维        斯孔蒂死后米兰宣布为共和国，弗朗切斯科·斯福尔扎担任雇佣军队长；1450年倒戈，迫使共和国最高会议拥立为维斯高蒂的继任者——米兰公爵。马基雅维里在本书第七章及所著《佛罗伦萨史》第七卷和《兵法》中一再引述弗朗切斯科为例，说明雇佣军的危险性。
+从古至今，统治国家获取政权，不是共和国就是君主国。君主国不是世袭的就是新的。
 
-②那波利王国，十五世纪意大利半岛的五个主要国家之一，于1500年由西班牙国王费尔迪南多二世(FerdinandoⅡ.1452—1515)同法国国王    路易十二世缔结条约予以瓜分。1504年西班牙将法国势力从所占领的部分领土赶走，并将西西里兼并。
-
-①“幸运”(fortuna)，一译“命运”(如在献词中，见前第2页)。“能力”(virtù)，同前者相对待，是马基雅维里学中的一个重要概念；    如同文艺复兴时期的作家的用语一样，通常指肉体上和精神上的力量，包括才能智慧，只是在极少数场合特指美德善行。
+在世袭君主国里，君主的后裔，一直以来也是那里的君主。新的君主国或者是全新的君主国、世袭君主国占领的附庸，这些国家之所以能够获取领土，要么是人民还是很习惯在这个君主的统治下生活，要么是这个向往自由的国家，要么是依靠别人的武力或君主自己的武力，否则就只能是说由于幸运了。
