--- a/00 君主论.md
+++ b/00 君主论.md
@@ -2,7 +2,7 @@
 意 尼利洛-马基雅维里著
 潘汉典译
 
-凡是想要获得君主恩宠的人，向来都是把自己认为最宝贵的东西，或者自以为君主最喜爱的东西，来献给君主。因此常常看见人们把骏马、武器、锦绣、宝玉以及同君主的伟大相称的一类装饰品献给君主。在我所有的东西里面，最宝贵和最有价值的莫过于我对伟大人物事迹的知识。依靠对现代大事的长期经验和对古代大事不断钻研而获得的。对于这种知识，我长时期地孜孜不倦地加以思考和检验，现在把它写成小小的一卷书献给陛下，这是我忠诚的证据。
+凡是想要获得君主恩宠的人，向来都是把自己认为最宝贵的东西，或者自以为君主最喜爱的东西，来献给君主。因此常常看见人们把骏马、武器、锦绣、宝玉以及同君主的伟大相称的一类装饰品献给君主。在我所有的东西里面，最宝贵和最有价值的莫过于我对伟大人物事迹的知晓。对现代大事长期经验积累和对古代大事不断钻研，而获得的只是。对于这些，我长时期孜孜不倦地加以思考和检验，现在把它写成了小小的一卷书。现在，我把他献给陛下，这是我对殿下的忠诚。
 
 > 虽然我自己认为这部著作不值得你垂青，但是考虑到除了使你能够在最短促的时间内了解我多年来历尽困苦艰危所学到的一切之外，我再没有力量献给你更好的礼物了。因此我深信，仰赖你的仁爱，这部著作一定会蒙你嘉纳的。
 
