--- a/02 世袭君主国.md
+++ b/02 世袭君主国.md
@@ -1,12 +1,12 @@
 # 02 世袭君主国
 
-君主国应该怎样进行统治和维持下去呢？
+君主国应该怎样进行统治和维持呢？
 
 > ①参阅马基雅维里：《论提图斯·李维\[罗马史\]前十卷》(以下简称：《李维史论》)，特别是第一卷。该卷第二章的题目就是《共和国有多少类，罗马共和国是属于哪一类的？》。
 
 在君主后裔统治的世袭国里保持政权，而且人们已经习惯统治的时候，就会比较容易保持政权，在新机建立的国家里，困难就会多一点。君主不触犯皇宗皇祖制度，遇到意外事件能随机应变，这就足够了，再普通的君主，依此方法，也是能够维持地位，除非遇到格外强大的力量，才有可能被篡位。即使被夺权，篡夺者一旦发生祸患，他也能够重新夺回。
 
-例如，在意大利我们就有费拉拉公爵。②其所以能够抵御〔14〕84年威尼斯人的侵袭和〔15〕10年教皇朱利奥①的侵袭，就是因为在这个领地历史悠久被统治了很长时间，此外没有其他原因。②因为世袭的君主很少得罪人民，非要得罪人民的可能性也比较少，因此他自然会得到人们的爱戴。除非他异常恶劣，惹人憎恨，不然他的臣民都会自然而然地向着他，这是很顺理成章的事情。
+例如，在意大利我们就有费拉拉公爵。②其所以能够抵御1484年威尼斯人的侵袭和1510年教皇朱利奥①的侵袭，就是因为在这个领地历史悠久被统治了很长时间，此外没有其他原因。②因为世袭的君主很少得罪人民，非要得罪人民的可能性也比较少，因此他自然会得到人们的爱戴。除非他异常恶劣，惹人憎恨，不然他的臣民都会自然而然地向着他，这是很顺理成章的事情。
 
 > 而且革新的记忆与原因，由于统治已经年代久远并且连绵不断而消失了；因为一次变革总是为另一次变革留下可以继续进行的条件的。 (@todo 未明白)
 
