--- a/03 混合君主国.md
+++ b/03 混合君主国.md
@@ -1,20 +1,30 @@
 # 03 混合君主国
 
-但是在新君主国里，就会重重困难。首先，如果它不是全新的，而只是一部分是新的(可称为混合国)，那里的变动主要是来源于一切新君主国所固有的困难。这就是，人们因为希望改善自己的境遇，愿意更换他们的统治者，并且这种希望促使他们拿起武器来反对他们的统治者。可是在这件事情上，他们上当受骗了，因为后来经验告诉他们，他们的境遇比以前更恶劣了。这种情况是由于另一种自然的、通常是必然的情况造成的。这就是，因为新的君主由于他的军队和新占领之后带来的无数的其他损害，常常不可避免地开罪于新的属民。
+> 但是在新君主国里，就会重重困难。首先，如果它不是全新的，而只是一部分是新的(可称为混合国)，那里的变动主要是来源于一切新君主国所固有的困难。这就是，人们因为希望改善自己的境遇，愿意更换他们的统治者，并且这种希望促使他们拿起武器来反对他们的统治者。可是在这件事情上，他们上当受骗了，因为后来经验告诉他们，他们的境遇比以前更恶劣了。这种情况是由于另一种自然的、通常是必然的情况造成的。这就是，因为新的君主由于他的军队和新占领之后带来的无数的其他损害，常常不可避免地开罪于新的属民。
 
-这样一来，当你占领这个国家领土的时候，所有受到你损害的人们都变成你的敌人了；而且你又不能够继续保持那些帮助你取得那里统治权的朋友们，因为你既不能够依照他们的期望给以满足；你又不能够采取强有力的措施对付他们，因为你感到对他们负有恩义；还因为一个人纵使在武力上十分强大，可是在进入一个地方的时候，总是需要获得那个地方的人民的好感的。由于这些理由，法国国王路易十二世占领米兰甚速，而丧失米兰亦甚速，而且头一次把路易十二世撵走，只需要洛多维科①自己的军队就足够的确，凡是一度叛变的地方再度被征服之后就不会那样容易丧失，因为统治者会利用叛乱提供的机会毫不犹豫地惩办罪犯，把可疑分子搞清楚，并且在薄弱的地方加强自己的地位。因此，头一次使法国失掉所占领的米兰，只要一位洛多维科公爵在边境揭竿而起就成了，但是要使法国国王再一次失去米兰，那就必须使全世界都反对他，②必须把他的军队打败并将其驱逐出意大利，其原因有如上述。
+在新的君主国里，想要统治好和维持下去，会有困难重重。（只有一部分是新的君主国称为混合国。）新的君主国困难来自于拥戴他的百姓，因为他们发现自己上当受骗了，比以前的境遇更加恶劣了。起初他们希望改善自己的境遇，而愿意被新君主所统治，并且这种希望促使他们拿起武器，反对原有的统治者。可样，这些人将会给新君主带来困难。当然，人们的境遇变得恶劣，是自然的也是必然的。起因是新国家的建立，行驶军队、发动战争这些都会带来无数的损害，这些也会无可避免的对百姓造成伤害，人民收到伤害了，自然又会成为新君主的困难了。
 
-①洛多维科(LodovicoSforza，1476—1500)，米兰公爵；1499年2月法国国王路易十二世(在位：1498—1515)同威尼斯人结盟，9月11日法    军攻占米兰，洛多维科逃亡德国。威尼斯人亦分占米兰公国的三分之一。次年2月在反法国军队的米兰了，因为原先给法国国王打开城门的    人民，后来察觉到他们的见解和他们曾经期待将来获得的利益都是上当受骗的，他们不能够忍受新君主的折磨了。
+> 这样一来，当你占领这个国家领土的时候，所有受到你损害的人们都变成你的敌人了；而且你又不能够继续保持那些帮助你取得那里统治权的朋友们，因为你既不能够依照他们的期望给以满足；你又不能够采取强有力的措施对付他们，因为你感到对他们负有恩义；还因为一个人纵使在武力上十分强大，可是在进入一个地方的时候，总是需要获得那个地方的人民的好感的。由于这些理由，法国国王路易十二世占领米兰甚速，而丧失米兰亦甚速，而且头一次把路易十二世撵走，只需要洛多维科①自己的军队就足够的确，凡是一度叛变的地方再度被征服之后就不会那样容易丧失，因为统治者会利用叛乱提供的机会毫不犹豫地惩办罪犯，把可疑分子搞清楚，并且在薄弱的地方加强自己的地位。因此，头一次使法国失掉所占领的米兰，只要一位洛多维科公爵在边境揭竿而起就成了，但是要使法国国王再一次失去米兰，那就必须使全世界都反对他，②必须把他的军队打败并将其驱逐出意大利，其原因有如上述。
 
-②1511年教皇朱利奥二世和西班牙、威尼斯结成神圣联盟以驱逐在意大利的法军。1512年4月11日在拉文纳(Ravenna)的决定性胜利的战役    中，尽管法军是胜利者，但由于主帅加斯通·德·富瓦(GastondeFois)之死和瑞士人为支持神圣同盟而突袭米兰，使胜利者受到挫折。瑞    士人在教皇朱利奥二世的怂恿下征服了米兰，立洛多维科的儿子马西米利亚诺(MassimilianoSforza)为其傀儡公爵。在朱利奥二世于1513    年2月去世后，法国人再度被驱逐出意大利，斯福尔扎家族的一个成员回到了米兰。
+这样一来，占领一个国家领土之后，所有收到伤害的人民都会变成新君主的敌人了。人民所期望的境遇新君主也无法满足他们。新的君主也不能采取强有力的措施对付他们，因为新君主会觉得辜负了人民的恩义。令一方面，纵然有十分强大的实力，但是在进入地方之后，还是需要获得地方人民的好感的。由于这些原因，法国国王路易十二世迅速占领米兰，而且也是头一次把路易十二世撵走，只需单单洛多维科①的军队就可以做到。凡是曾叛变不断的地方，再度被征服之后，就不会很容易的失去，因为统治者会利用叛乱的局势毫不犹豫地惩办罪犯，把可疑分子搞清楚，并且在薄弱的地方加强自己。因此，头一次使法国失掉所占领的米兰，只需要一位洛多维科公爵在边境揭竿而起就成了，但是要使法国国王再一次失去米兰，那就必须使全世界都反对他，②必须把他的军队打败并将其驱逐出意大利，其原因有如上述。
 
-可是，米兰毕竟一而再地两度从法国人手里夺取过来。关于头一次丧失的一般原因已经讨论过了，现在还要谈谈第二次丧失的原因，并且看一下法国国王当时有什么办法，以及任何一个人如果身临其境要比法国国王更牢固地保有他征服的领土能够有什么办法。
+> ①洛多维科(LodovicoSforza，1476—1500)，米兰公爵；1499年2月法国国王路易十二世(在位：1498—1515)同威尼斯人结盟，9月11日法    军攻占米兰，洛多维科逃亡德国。威尼斯人亦分占米兰公国的三分之一。次年2月在反法国军队的米兰了，因为原先给法国国王打开城门的    人民，后来察觉到他们的见解和他们曾经期待将来获得的利益都是上当受骗的，他们不能够忍受新君主的折磨了。
 
-让我说，那些被胜利者合并到自己的古老国家的国家，或者与征服的国家属于同一地区，使用同一语言，或者并非如此，二者必居其一。如果是同一地区的话，特别是如果那些国家的人们不是起义帮助下，洛多维科归国迅速光复米兰。但其后又被法军挫败，死于监狱。
+> ②1511年教皇朱利奥二世和西班牙、威尼斯结成神圣联盟以驱逐在意大利的法军。1512年4月11日在拉文纳(Ravenna)的决定性胜利的战役    中，尽管法军是胜利者，但由于主帅加斯通·德·富瓦(GastondeFois)之死和瑞士人为支持神圣同盟而突袭米兰，使胜利者受到挫折。瑞    士人在教皇朱利奥二世的怂恿下征服了米兰，立洛多维科的儿子马西米利亚诺(MassimilianoSforza)为其傀儡公爵。在朱利奥二世于1513    年2月去世后，法国人再度被驱逐出意大利，斯福尔扎家族的一个成员回到了米兰。
 
-过惯了自由生活的话，那末保有这些国家是最容易的；而且只要灭绝过去统治他们的君主的血统，就能够牢固地保有这些国家了。由于在其他的事情上维持着他们的古老状态，而且在风俗习惯上没有什么不同之处，人们就会安然地生活下去。正如人们在布列塔尼、布尔戈尼、加斯科涅和诺曼底所看到的，这些地方已经长时期地归属于法国了；①而且尽管语言有某些差异，可是习惯是相同的，因此它们很容易结合在一起。征服这些地方的人如果想要保有它们，就必须注意两个方面：一方面就是，要把它们的旧君的血统灭绝；另一方面就是既不要改变它们的法律，也不要改变它们的赋税。这样一来，在一个极短的期间内，它们就会同古老的王国变成混然一体了。
+> 可是，米兰毕竟一而再地两度从法国人手里夺取过来。关于头一次丧失的一般原因已经讨论过了，现在还要谈谈第二次丧失的原因，并且看一下法国国王当时有什么办法，以及任何一个人如果身临其境要比法国国王更牢固地保有他征服的领土能够有什么办法。
 
-①以上各地归并于法国的时期：布尔戈尼为1477年(路易十一世)、布列塔尼为1491年(查理八世)、加斯科涅为1453年(查理七世)、诺曼底    为1204年(菲利普二世)。
+可是，米兰毕竟一而再地两度从法国人手里夺取所占领土地。头一次丧失原因已述，现在要谈谈第二次丧失的原因，并且看一下法国国王当时有什么办法。对于任何一个身临其境的人，是否有比法国国王更有办法来保护自己所征服的领土。
+
+> 让我说，那些被胜利者合并到自己的古老国家的国家，或者与征服的国家属于同一地区，使用同一语言，或者并非如此，二者必居其一。如果是同一地区的话，特别是如果那些国家的人们不是起义帮助下，洛多维科归国迅速光复米兰。但其后又被法军挫败，死于监狱。
+
+那些被统治的国家，或者与征服的国家属于同一地区，使用同一语言，或者并非如此，二者必居其一。如果是统一地区的话，特别是，如果那些国家的人民不是起义来帮助其统治的，洛多维科归国迅速光复米兰，但其后又被法军挫败，死于监狱。
+
+> 过惯了自由生活的话，那末保有这些国家是最容易的；而且只要灭绝过去统治他们的君主的血统，就能够牢固地保有这些国家了。由于在其他的事情上维持着他们的古老状态，而且在风俗习惯上没有什么不同之处，人们就会安然地生活下去。正如人们在布列塔尼、布尔戈尼、加斯科涅和诺曼底所看到的，这些地方已经长时期地归属于法国了；①而且尽管语言有某些差异，可是习惯是相同的，因此它们很容易结合在一起。征服这些地方的人如果想要保有它们，就必须注意两个方面：一方面就是，要把它们的旧君的血统灭绝；另一方面就是既不要改变它们的法律，也不要改变它们的赋税。这样一来，在一个极短的期间内，它们就会同古老的王国变成混然一体了。
+
+过惯了自由生活的话，那么保有这些国家是最容易的；而且只要灭绝过去统治他们的君主的血统，就能够牢固地保有这些国家了。由于在其他的事情上维持着他们的古老状态，而且在风俗习惯上没有什么不同之处，人们就会安然地生活下去。正如人们在布列塔尼、布尔戈尼、加斯科涅和诺曼底所看到的，这些地方已经长时期地归属于法国了；①而且尽管语言有某些差异，可是习惯是相同的，因此它们很容易结合在一起。征服这些地方的人如果想要保有它们，就必须注意两个方面：一方面就是，要把它们的旧君的血统灭绝；另一方面就是既不要改变它们的法律，也不要改变它们的赋税。这样一来，在一个极短的期间内，它们就会同古老的王国变成混然一体了。
+
+> ①以上各地归并于法国的时期：布尔戈尼为1477年(路易十一世)、布列塔尼为1491年(查理八世)、加斯科涅为1453年(查理七世)、诺曼底    为1204年(菲利普二世)。
 
 但是，如果那些被征服的国家在语言、习惯和各种制度上同征服国不同，那末就会发生种种困难了。要保有那些被征服的国家，就需要非常的好运并作出巨大的努力。而最好和最有力的办法之一，也许是征服者亲自前往，驻节在那里。这就会使得他的占领地更加稳固，更加持久，例如土耳其人在希腊就是这样作的。①假使土耳其国王不移跸希腊，那么，即使他为着保有希腊而采取其他一切办法，他还是不能够保有那个国家的。因为如果一个人在当地的话，骚乱一露头他就能够察觉了，从而他就能够迅速地加以消除。但是如果他不在跟前，那么，只有在大乱的时候他才能够察觉，那时他已经不再能够消除骚乱了。除此之外，那个地方不受他的官吏掠夺；臣民由于能够立即求助于君主而感到满意。因此，那些愿意做良民的人势必更加爱戴君主，而那些别有怀抱的人则势必更加害怕他。至于那些想从外部进攻这个国家的人，就必须非常谨慎，因为当君主驻节其地之日，想把它从君主手里夺取过来是极困难的。
 
@@ -102,4 +112,3 @@
 ①切萨雷·博尔贾(CesareBorgia，1475或1476—1507)，是罗德里戈·博尔贾(后任教皇，称亚历山大六世)和罗马妇女万诺扎·代·卡塔    内(VannozzadeiCattanei)的私生子，后在亚历山大六世的支持下，1493年任西班牙瓦伦西亚的枢机主教，1499年由法国国王授予瓦伦蒂诺    公爵。
 
 ②1500年马基雅维里第一次出使法国宫廷，有机会同罗阿诺枢机主教(cardi—nalediRoano)晤谈。
-
