--- a/00 君主论.md
+++ b/00 君主论.md
@@ -2,20 +2,20 @@
 意 尼利洛-马基雅维里著
 潘汉典译
 
-凡是想要获得君主恩宠的人，向来都是把自己认为最宝贵的东西，或者自以为君主最喜爱的东西，来献给君主。因此常常看见人们把骏马、武器、锦绣、宝玉以及同君主的伟大相称的一类装饰品献给君主。在我所有的东西里面，最宝贵和最有价值的莫过于我对伟大人物事迹的知晓。对现代大事长期经验积累和对古代大事不断钻研，而获得的只是。对于这些，我长时期孜孜不倦地加以思考和检验，现在把它写成了小小的一卷书。现在，我把他献给陛下，这是我对殿下的忠诚。
+凡是想要获得君主恩宠的人，向来都是把自己认为最宝贵的东西，或者自以为君主最喜爱的东西，来献给君主。因此常常看见人们把骏马、武器、锦绣、宝玉，以及同君主的伟大相称的一类装饰品献给君主。在我所有的东西里面，最宝贵和最有价值的莫过于我对伟大人物事迹的知晓，我长期地对现代大事做经验积累、对古代大事不断钻研，然后，孜孜不倦地加以思考和检验，现在把它写成了小小的一卷书。我把他献给陛下，这是我对殿下的忠诚。
 
 > 虽然我自己认为这部著作不值得你垂青，但是考虑到除了使你能够在最短促的时间内了解我多年来历尽困苦艰危所学到的一切之外，我再没有力量献给你更好的礼物了。因此我深信，仰赖你的仁爱，这部著作一定会蒙你嘉纳的。
 
-虽然我自己认为这部著作不值得你垂青。除了能够在短时间内让你了解我多年来所学到的一切，历经困苦艰危所学到的一切，我再也没有办法给你更好的礼物了。仰赖你的仁爱，我深信这部著作一定会得到你的赞许和采纳。
+虽然我自己认为这部著作不值得你垂青，因为他只能够让你在短时间内让你了解到我多年来所学到的一起，经历困苦艰危所学到的一切，其他的再也没有什么了，而且我也没有办法给你更好的礼物了。仰赖你的仁爱，我深信这部著作一定会得到你的赞许和采纳。
 
 > 对于这部著作，我没有像许多人在叙述他们的主题并加以润饰时惯常那样使用铿锵的章句、夸张而瑰丽的语言、在外表上炫人耳目的东西或者装饰品。因为我希望我的著作如果不赢得称誉则已，否则只应是由于其内容新颖和主题的重要性而受到欢迎。
 
-对于这部著作，我并没有使用铿锵的句子、夸张而华丽的语言，或者任何图有华丽装饰的辞藻，因为我希望著作能够在内容的重要性方面而受到称誉，而不是其他的方面。
+对于这部著作，我并没有使用铿锵的句子、夸张而华丽的语言，或者任何图有华丽装饰的辞藻，因为我希望著作能够因为内容重要而受到称誉，而不是其他的方面。
 
 > 我想，一个身居卑位的人，敢于探讨和指点君主的政务，不应当被看作僭妄，因为正如那些绘风景画的人们，为了考察山峦和高地的性质便厕身于平原，而为了考察平原便高踞山顶一样，同理，深深地认识人民的性质的人应该是君主，而深深地认识君主的性质的人应属于人民。
 
-我想，一个身份卑微的人，敢于探讨和指点君主的政务，不应该被看做僭妄。正如那些风景画家，为了考察山峦和高地，便跑到平原地带，为了考察平原便爬到山顶一样，深入认识人民的人应该是君主，而深深认识君主的人应该是人民。
+我想，一个身份卑微的人，敢于探讨和指点君主的政务，不应该被看做僭妄。正如风景画家，为了考察山峦和高地，便跑到平原地带，为了考察平原便爬到山顶一样。深入认识人民的人应该是君主，而深入认识君主的就该是人民了。
 
 > 因此，殿下，请你体谅我敬献这个小小的礼品的心意而接受它吧，如果你认真地考虑和诵读它，你就会从中了解到我的热切的愿望：祈望你达到命运之神和你的其他条件使你有希望达到的伟大地位。同时，如果殿下有朝一日，从你所在的巍巍的顶峰俯瞰这块卑下的地方，你就会察觉我是多么无辜地受着命运之神的巨大的不断的恶毒折磨呵！
 
-因此，殿下，请你体谅我的心意，而接受这个小小的礼品吧，如果您认真地阅读和考虑它，便会从中了解到我的热切愿望：祈望您达到命运之神和你的伟大成就。
+因此，殿下，请你体谅我的心意，而接受这个小小的礼物吧，如果你认真地阅读和思考它，便会从中了解到我的热切愿望，祈望您达到命运之神和你的伟大成就。
