--- a/01 君主国的种类和获得方法.md
+++ b/01 君主国的种类和获得方法.md
@@ -2,6 +2,6 @@
 
 > 从古至今，统治国家、政权，不是共和国就是君主国。君主国不是世袭的就是新的。在世袭君主国里，长期以来君主的后裔就是那里的君主。新的君主国或者是全新的，如弗朗切斯科·斯福尔扎①的米兰公国；或者是世袭君主国占领的附庸，如西班牙王合并的那波利王国。②这样获得的领土，或者原来习惯在一个君主统治下生活，或者向来是自由的国家；而其获得，或者是依靠他人的武力或君主自己的武力，否则就是由于幸运或者由于能力。
 
-从古至今，统治国家获取政权，不是共和国就是君主国。君主国不是世袭的就是新建的。
+从古至今，统治国家获取政权，不是共和国就是君主国。君主国不是世袭的就是新建的，（新建的有的只有部分是新建的，成为混合君主国）。
 
-在世袭君主国里，君主的后裔，一直以来也是那里的君主。全新建立的君主国或依赖世袭国的君主国，这些国家之所以能够获取领土，要么是依靠别人或自己的武力，要么是人民还习惯被原来君主所统治，要么是这个国家向往自由，否则就只能是说是由于幸运了。
+在世袭君主国里，君主的后裔，一直以来都是那里的君主。全新建立的君主国或依赖世袭国的君主国，这些国家之所以能够获取领土，要么是依靠别人或自己的武力，要么是人民还习惯于被他们所统治，要么是这个国家向往自由，否则就只能是说是由于幸运了。
