--- a/03 混合君主国.md
+++ b/03 混合君主国.md
@@ -2,7 +2,7 @@
 
 > 但是在新君主国里，就会重重困难。首先，如果它不是全新的，而只是一部分是新的(可称为混合国)，那里的变动主要是来源于一切新君主国所固有的困难。这就是，人们因为希望改善自己的境遇，愿意更换他们的统治者，并且这种希望促使他们拿起武器来反对他们的统治者。可是在这件事情上，他们上当受骗了，因为后来经验告诉他们，他们的境遇比以前更恶劣了。这种情况是由于另一种自然的、通常是必然的情况造成的。这就是，因为新的君主由于他的军队和新占领之后带来的无数的其他损害，常常不可避免地开罪于新的属民。
 
-在新的君主国里，想要统治好国家并一直维持下去，就会有重重的困难。这些困难是所有新的君主国都会面临到的。困难来自于拥戴君主的人民，因为他们发现自己上当受骗了。起初他们希望改善自己的境遇，而愿意被新君主所统治，并且这种希望促使他们拿起武器，反对原有的君主。可后来，他们发现，到头来他们的境遇却更加恶劣了。当然，人民的境遇变得恶劣，是自然的也是必然的。起因是新国家的建立，行驶军队、发动战争，这些事情会带来无数的损害，同样也会无可避免的对百姓造成伤害。
+在新的君主国里，想要统治好国家并一直维持下去，就会有重重的困难。这些困难是所有新的君主国都会面临到的。困难来自于拥戴君主的人民，因为他们发现自己上当受骗了。起初他们希望改善自己的境遇，而愿意被新君主所统治，并且他们也拿起武器，反对原有的君主。可后来，他们发现，到头来他们的境遇更加恶劣了。当然，人民的境遇变得恶劣，是自然的也是必然的。起因是国家的建立，行驶军队、发动战争，这些事情会无可避免的对百姓造成伤害。
 
 > 这样一来，当你占领这个国家领土的时候，所有受到你损害的人们都变成你的敌人了；而且你又不能够继续保持那些帮助你取得那里统治权的朋友们，因为你既不能够依照他们的期望给以满足；你又不能够采取强有力的措施对付他们，因为你感到对他们负有恩义；还因为一个人纵使在武力上十分强大，可是在进入一个地方的时候，总是需要获得那个地方的人民的好感的。由于这些理由，法国国王路易十二世占领米兰甚速，而丧失米兰亦甚速，而且头一次把路易十二世撵走，只需要洛多维科①自己的军队就足够的确，凡是一度叛变的地方再度被征服之后就不会那样容易丧失，因为统治者会利用叛乱提供的机会毫不犹豫地惩办罪犯，把可疑分子搞清楚，并且在薄弱的地方加强自己的地位。因此，头一次使法国失掉所占领的米兰，只要一位洛多维科公爵在边境揭竿而起就成了，但是要使法国国王再一次失去米兰，那就必须使全世界都反对他，②必须把他的军队打败并将其驱逐出意大利，其原因有如上述。
 
