--- a/03 混合君主国.md
+++ b/03 混合君主国.md
@@ -22,23 +22,33 @@
 
 > 过惯了自由生活的话，那末保有这些国家是最容易的；而且只要灭绝过去统治他们的君主的血统，就能够牢固地保有这些国家了。由于在其他的事情上维持着他们的古老状态，而且在风俗习惯上没有什么不同之处，人们就会安然地生活下去。正如人们在布列塔尼、布尔戈尼、加斯科涅和诺曼底所看到的，这些地方已经长时期地归属于法国了；①而且尽管语言有某些差异，可是习惯是相同的，因此它们很容易结合在一起。征服这些地方的人如果想要保有它们，就必须注意两个方面：一方面就是，要把它们的旧君的血统灭绝；另一方面就是既不要改变它们的法律，也不要改变它们的赋税。这样一来，在一个极短的期间内，它们就会同古老的王国变成混然一体了。
 
-过惯了自由生活的话，那么保有这些国家是最容易的；而且只要灭绝过去统治他们的君主的血统，就能够牢固地保有这些国家了。由于在其他的事情上维持着他们的古老状态，而且在风俗习惯上没有什么不同之处，人们就会安然地生活下去。正如人们在布列塔尼、布尔戈尼、加斯科涅和诺曼底所看到的，这些地方已经长时期地归属于法国了；①而且尽管语言有某些差异，可是习惯是相同的，因此它们很容易结合在一起。征服这些地方的人如果想要保有它们，就必须注意两个方面：一方面就是，要把它们的旧君的血统灭绝；另一方面就是既不要改变它们的法律，也不要改变它们的赋税。这样一来，在一个极短的期间内，它们就会同古老的王国变成混然一体了。
+国家下的人民过着自由的生活，想统治这样的国家，是比较容易的。只要将过去统治他们的君主消灭，就能牢固的统治这样的国家。因为，在他们的事情上维持的是之前他们的状态，而且在风俗习惯上也没有什么不同之处，人们就会安然的生活下去。正如人们在布列塔尼、布尔戈尼、加斯科涅和诺曼底所看到的，这些地方已经长期的归属于法国了。①而且尽管语言上有某些差异，但是习惯是相同的，因此他们很容易结合在一起。想要统治征服的领土，就需要注意两个方面：一，要把他们旧的君主血统灭绝。二，既不要改变他们的法律，也不要改变他们的赋税。这样一来，在一个极短的时间内，就能同被征服的王国变成浑然一体了。
 
-> ①以上各地归并于法国的时期：布尔戈尼为1477年(路易十一世)、布列塔尼为1491年(查理八世)、加斯科涅为1453年(查理七世)、诺曼底    为1204年(菲利普二世)。
+> ①以上各地归并于法国的时期：布尔戈尼为1477年(路易十一世)、布列塔尼为1491年(查理八世)、加斯科涅为1453年(查理七世)、诺曼底为1204年(菲利普二世)。
 
-但是，如果那些被征服的国家在语言、习惯和各种制度上同征服国不同，那末就会发生种种困难了。要保有那些被征服的国家，就需要非常的好运并作出巨大的努力。而最好和最有力的办法之一，也许是征服者亲自前往，驻节在那里。这就会使得他的占领地更加稳固，更加持久，例如土耳其人在希腊就是这样作的。①假使土耳其国王不移跸希腊，那么，即使他为着保有希腊而采取其他一切办法，他还是不能够保有那个国家的。因为如果一个人在当地的话，骚乱一露头他就能够察觉了，从而他就能够迅速地加以消除。但是如果他不在跟前，那么，只有在大乱的时候他才能够察觉，那时他已经不再能够消除骚乱了。除此之外，那个地方不受他的官吏掠夺；臣民由于能够立即求助于君主而感到满意。因此，那些愿意做良民的人势必更加爱戴君主，而那些别有怀抱的人则势必更加害怕他。至于那些想从外部进攻这个国家的人，就必须非常谨慎，因为当君主驻节其地之日，想把它从君主手里夺取过来是极困难的。
+> 但是，如果那些被征服的国家在语言、习惯和各种制度上同征服国不同，那末就会发生种种困难了。要保有那些被征服的国家，就需要非常的好运并作出巨大的努力。而最好和最有力的办法之一，也许是征服者亲自前往，驻节在那里。这就会使得他的占领地更加稳固，更加持久，例如土耳其人在希腊就是这样作的。①假使土耳其国王不移跸希腊，那么，即使他为着保有希腊而采取其他一切办法，他还是不能够保有那个国家的。因为如果一个人在当地的话，骚乱一露头他就能够察觉了，从而他就能够迅速地加以消除。但是如果他不在跟前，那么，只有在大乱的时候他才能够察觉，那时他已经不再能够消除骚乱了。除此之外，那个地方不受他的官吏掠夺；臣民由于能够立即求助于君主而感到满意。因此，那些愿意做良民的人势必更加爱戴君主，而那些别有怀抱的人则势必更加害怕他。至于那些想从外部进攻这个国家的人，就必须非常谨慎，因为当君主驻节其地之日，想把它从君主手里夺取过来是极困难的。
 
-①此处所称希腊，实指土耳其人在十五世纪征服巴尔干半岛。先是穆拉德二世(MuradⅡ，1421—1451)开始远征匈牙利、希腊、阿尔巴尼亚    等国，其后穆罕默德二世(1451—1481)继续扩张：于1453年灭拜占庭帝国，并将奥斯曼帝国的首都移至君士坦丁堡，改名伊斯坦布尔，从    而确立了土耳其在欧洲的势力。
+如果那些被征服的国家在语言、习惯和各种制度上同征服国不同，那么就会有种种困难了。要保有那些被征服的国家，就需要有非常的运气并作出巨大的努力。最好最有力的办法之一，也许是征服者亲自前往，驻节在那里。这就会使占领地更加稳固，更加持久。例如土耳其人在希腊就是这样做的。①假使土耳其国王不驻节在希腊，即使采取其他一切办法，还是不能够保有希腊的。因为，驻节在当地的话，骚乱一露头就能够察觉，从而就能够迅速地加以消除。如果不在当地，只有在大乱的时候才能够察觉，那时已经不再能够消除骚乱了。除此之外，还能使那个地方不受官吏掠夺；臣民也能够立即求助于君主，进而能够让臣民感到满意。那些愿意做良民的人势必更加爱戴君主，那些别有用心的人则势必更加害怕驻节在这里的国王。至于那些想从外部进攻这个国家的人，就必须非常谨慎，因为君主驻节在这里的时候，想从君主手里夺取走它是极困难的事情。
 
-另一个更好的对策，就是在一两处可以说是那个国家要害②之地派遣殖民，因为这样做是必要的，否则就有必要在那里驻扎大批步兵和骑兵，二者必择其一。而君主在殖民这件事情上不用花费许多钱财；他无需花费，或者只要支出很少费用就能够移送殖民，并且使他们驻屯在那里。而君主所触犯的人们只是因为他们的田地房舍被拿去给新来的殖民的一些人，而这些人只是那个国家的极少数的一部分人。同时被触犯的这些人仍然散居各方并且仍然是贫困的，因此是永远不能够对君主为害的；而且，所有其余的人都没有受到侵害，因此对他们加以安抚是容易不过的。同时，由于他们害怕自己遭遇将如同那些被掠夺的人们一样，他们就战战兢兢不敢犯错误。
+> ①此处所称希腊，实指土耳其人在十五世纪征服巴尔干半岛。先是穆拉德二世(MuradⅡ，1421—1451)开始远征匈牙利、希腊、阿尔巴尼亚等国，其后穆罕默德二世(1451—1481)继续扩张：于1453年灭拜占庭帝国，并将奥斯曼帝国的首都移至君士坦丁堡，改名伊斯坦布尔，从而确立了土耳其在欧洲的势力。
 
-②“要害”原文为拉丁文“compedes”意即关键或重要据点(ccppi)。
+> 另一个更好的对策，就是在一两处可以说是那个国家要害②之地派遣殖民，因为这样做是必要的，否则就有必要在那里驻扎大批步兵和骑兵，二者必择其一。而君主在殖民这件事情上不用花费许多钱财；他无需花费，或者只要支出很少费用就能够移送殖民，并且使他们驻屯在那里。而君主所触犯的人们只是因为他们的田地房舍被拿去给新来的殖民的一些人，而这些人只是那个国家的极少数的一部分人。同时被触犯的这些人仍然散居各方并且仍然是贫困的，因此是永远不能够对君主为害的；而且，所有其余的人都没有受到侵害，因此对他们加以安抚是容易不过的。同时，由于他们害怕自己遭遇将如同那些被掠夺的人们一样，他们就战战兢兢不敢犯错误。
 
-我的结论是：这种殖民并不靡费，而且比较忠实可靠，触犯的人也较少；而被触犯的人，正如上面已经说过的，既贫困而且散居各方，是不能为害的。关于这一点，必须注意的是：对人们应当加以爱抚，要不然就应当把他们消灭掉；因为人们受到了轻微的侵害，能够进行报复，但是对于沉重的损害，他们就无能为力进行报复了。所以，我们对一个人加以侵害，应当是我们无需害怕他们会报复的一种侵害。
+另一个更好的对策，在那个国家一两个要害之地派遣殖民，这样做是必要的，否则就有必要在那里驻扎大批步兵和骑兵，二者必择其一。君主在殖民这件事情上不用花费许多钱财，无需花费，或者只要支出很少费用就能够移送殖民，并且使他们驻屯在那里。那些受到君主所触犯的人，只是因为他们的田地房舍被拿去给新来的殖民了，而且这些人只是极少数的一部分人。同时，被触犯的人，任然散居在各个地方，而且很贫穷。因此这些人，并不能对君主形成任何威胁。而且，其余的大部分人都没有受到君主或殖民的侵害，因此对他们加以安抚是再容易不过的。同样，他们害怕自己也被掠夺，因此会变得战战兢兢不敢犯错误。
 
-但是如果在那里以驻屯军队来代替殖民的话，由于维持驻屯军不得不把那个国家获得的全部收入耗费掉，这样耗费就更多了；结果所得反而变成损失，而且得罪的人就更多了，因为由于他的军队从这里到那里辗转调动，那个国家全部受到损害，对此每一个人都感到痛苦，于是一个个都变成他的仇敌了。他们虽然被打败了，可是仍然在他们自己的老家里，是能够为害的敌人。因此，无论从哪方面说来，驻屯军队是不中用的，而殖民却是有益的。
+> ②“要害”原文为拉丁文“compedes”意即关键或重要据点(ccppi)。
 
-再说，一个君主如果占有上面所说的在语言、习惯和各种制度上同本国不同的地区，他就应当使自己成为那些较弱小的邻近国家的首领和保护者，并且设法削弱它们当中较强大的势力，同时要注意不让任何一个同自己一般强大的外国人①利用任何意外事件插足那里。而且常常会发生这样的情况：那些心怀不满的本地人，由于分外野心或者由于恐惧，把外国人引进来了。正如大家所知道的，罗马人就是由埃托利亚人给引入希腊的；①而且罗马人过去侵入的任何地方都是由那个地方的人给引入的。事情的经过常常是这样的：当一个强大的外国人一旦侵入一个地区的时候，在这个地区里所有那些较弱小的势力，由于对那个凌驾在他们头上的强大势力的嫉妒作祟，就会立即依附这个入侵的外国人。因此把这些弱小的势力笼络过来并不需要什么气力；因为他们全体会立即甘心情愿同他所已经征服的国家联结成为一体。他只要注意不要让他们取得太大的力量和太大的权威；他依靠自己的力量并且在他们的帮助下，是能够很容易迫使那些较强大的势力屈服的，从而能够继续成为这个地区的完全的主宰。但是如果他没有把这件事情处理好，他就会很快地把已经赢得的一切丧失掉，而且当他拥有这个地区的时候，他会感到无限的困难与烦恼。
+> 我的结论是：这种殖民并不靡费，而且比较忠实可靠，触犯的人也较少；而被触犯的人，正如上面已经说过的，既贫困而且散居各方，是不能为害的。关于这一点，必须注意的是：对人们应当加以爱抚，要不然就应当把他们消灭掉；因为人们受到了轻微的侵害，能够进行报复，但是对于沉重的损害，他们就无能为力进行报复了。所以，我们对一个人加以侵害，应当是我们无需害怕他们会报复的一种侵害。
+
+我的结论是：派遣殖民并不靡费，而且比较忠实可靠，触犯的人也较少；而被触犯的人，既贫困又散居各方，是不会有威胁的。有一点必须注意：对人们应当加以爱抚，要不然就应当把他们消灭掉；因为人们受到了轻微的侵害，就会进行报复，但是对于沉重的损害，他们就无能为力进行报复了。所以，要侵害一个人，就应当要做到不再害怕他会进行报复。
+
+> 但是如果在那里以驻屯军队来代替殖民的话，由于维持驻屯军不得不把那个国家获得的全部收入耗费掉，这样耗费就更多了；结果所得反而变成损失，而且得罪的人就更多了，因为由于他的军队从这里到那里辗转调动，那个国家全部受到损害，对此每一个人都感到痛苦，于是一个个都变成他的仇敌了。他们虽然被打败了，可是仍然在他们自己的老家里，是能够为害的敌人。因此，无论从哪方面说来，驻屯军队是不中用的，而殖民却是有益的。
+
+如果以驻屯军队来代替殖民，就需要耗费更多的收入，以维持军队，甚至不得不把从那个国家获得的全部收入都耗费掉，耗费得是在是太多了。本来是有所得，现在就变成损失了，而且得罪的人更多了。军队行军辗转调动，国家耗费巨大，大家都会感到痛苦，也会变成仇敌。被占领国家的人民，虽然是被打败了，但是他们任然在他们自己的老家里，他们还是有威胁的。因此，无论从哪方面说来，驻屯军队是不中用的，而殖民却是有益的。
+
+> 再说，一个君主如果占有上面所说的在语言、习惯和各种制度上同本国不同的地区，他就应当使自己成为那些较弱小的邻近国家的首领和保护者，并且设法削弱它们当中较强大的势力，同时要注意不让任何一个同自己一般强大的外国人①利用任何意外事件插足那里。而且常常会发生这样的情况：那些心怀不满的本地人，由于分外野心或者由于恐惧，把外国人引进来了。正如大家所知道的，罗马人就是由埃托利亚人给引入希腊的；①而且罗马人过去侵入的任何地方都是由那个地方的人给引入的。事情的经过常常是这样的：当一个强大的外国人一旦侵入一个地区的时候，在这个地区里所有那些较弱小的势力，由于对那个凌驾在他们头上的强大势力的嫉妒作祟，就会立即依附这个入侵的外国人。因此把这些弱小的势力笼络过来并不需要什么气力；因为他们全体会立即甘心情愿同他所已经征服的国家联结成为一体。他只要注意不要让他们取得太大的力量和太大的权威；他依靠自己的力量并且在他们的帮助下，是能够很容易迫使那些较强大的势力屈服的，从而能够继续成为这个地区的完全的主宰。但是如果他没有把这件事情处理好，他就会很快地把已经赢得的一切丧失掉，而且当他拥有这个地区的时候，他会感到无限的困难与烦恼。
+
+再说，一个君主如果占有在语言、习惯和各种制度上同本国不同的地区，他就应当使自己成为那些较弱小的邻近国家的首领和保护者，并且设法削弱他们当中较强大的势力，同时要注意，不让任何一个同自己一般强大的外国人①利用任何意外事件插足那里。常常会发生这样的事情：那些心怀不满的本地人，由于分外野心或者由于恐惧，把外国人引进来。埃托利亚人把罗马人引入了希腊；①罗马人过去侵入过很多地方，而且都是当地人把罗马人引入进来的。经过常常是这样的，当一个强大的外国人一旦侵入一个地区，在这个地区里所有那些较弱小的势力，就会立即依附这个入侵的外国人，因为那个凌驾在他们头上的强大势力的嫉妒作祟。把这些弱小的势力笼络过来并不需要什么气力，因为他们全部都会立即心甘情愿同他所已经征服的国家联结成为一体。注意不要让他们取得太大的力量和太大的权威，他们依靠自己的力量并且在得到帮助的情况下，是能够很容易迫使那些较强大的势力屈服的，从而能够继续成为这个地区完全的主宰。但是如果他没有把这件事情处理好，他就会很快地把已经赢得的一切丧失掉，而且当他拥有这个地区的时候，他会感到无限的困难与烦恼。
 
 ①强大的外国人(unoforestierepotente)，意指强大的外国君主。
 
