--- a/03 混合君主国.md
+++ b/03 混合君主国.md
@@ -2,11 +2,11 @@
 
 > 但是在新君主国里，就会重重困难。首先，如果它不是全新的，而只是一部分是新的(可称为混合国)，那里的变动主要是来源于一切新君主国所固有的困难。这就是，人们因为希望改善自己的境遇，愿意更换他们的统治者，并且这种希望促使他们拿起武器来反对他们的统治者。可是在这件事情上，他们上当受骗了，因为后来经验告诉他们，他们的境遇比以前更恶劣了。这种情况是由于另一种自然的、通常是必然的情况造成的。这就是，因为新的君主由于他的军队和新占领之后带来的无数的其他损害，常常不可避免地开罪于新的属民。
 
-在新的君主国里，想要统治好国家并一直维持下去，就会有重重的困难。这些困难是所有新的君主国都会面临到的。困难来自于拥戴君主的人民，因为他们发现自己上当受骗了。起初他们希望改善自己的境遇，而愿意被新君主所统治，并且他们也拿起武器，反对原有的君主。可后来，他们发现，到头来他们的境遇更加恶劣了。当然，人民的境遇变得恶劣，是自然的也是必然的。起因是国家的建立，行驶军队、发动战争，这些事情会无可避免的对百姓造成伤害。
+在新的君主国里，想要统治好国家并一直维持下去，就会有重重的困难。这些困难是所有新君主国都会面临到的。困难来自于人民，因为他们发现自己上当受骗了。起初他们希望改善自己的境遇，而愿意被君主所统治，并且他们也拿起武器，反对原有的君主。可后来，他们发现，到头来他们的境遇更加恶劣了。当然，人民的境遇变得恶劣，是自然的也是必然的。起因是建立国家、行驶军队、发动战争，这些事情会无可避免的对人民造成伤害。
 
 > 这样一来，当你占领这个国家领土的时候，所有受到你损害的人们都变成你的敌人了；而且你又不能够继续保持那些帮助你取得那里统治权的朋友们，因为你既不能够依照他们的期望给以满足；你又不能够采取强有力的措施对付他们，因为你感到对他们负有恩义；还因为一个人纵使在武力上十分强大，可是在进入一个地方的时候，总是需要获得那个地方的人民的好感的。由于这些理由，法国国王路易十二世占领米兰甚速，而丧失米兰亦甚速，而且头一次把路易十二世撵走，只需要洛多维科①自己的军队就足够的确，凡是一度叛变的地方再度被征服之后就不会那样容易丧失，因为统治者会利用叛乱提供的机会毫不犹豫地惩办罪犯，把可疑分子搞清楚，并且在薄弱的地方加强自己的地位。因此，头一次使法国失掉所占领的米兰，只要一位洛多维科公爵在边境揭竿而起就成了，但是要使法国国王再一次失去米兰，那就必须使全世界都反对他，②必须把他的军队打败并将其驱逐出意大利，其原因有如上述。
 
-这样一来，当你占领一个国家领土之后，所有受到伤害的人民都会成为你的敌人了。你无法再取得这些人民的支持，因为你无法满足他们所期望的，你也不能采取强有力的措施对付他们，因为你会觉得辜负了人民的恩义。纵然你实力强大，进入地方之后，你还是需要获得地方人民的好感和支持的。人民期望好的待遇，所以支持法国国王路易十二世迅速占领米兰。这也是头一次把路易十二世撵走，单单只需洛多维科①的军队就可以做到，那是因为有地方人民的支持和爱戴。凡是曾经叛变不断的地方，再度被征服之后，就不会很容易的失去，因为统治者会趁叛乱这个时机，毫不犹豫地惩办罪犯，摸清可疑分子底细，并且加强自己薄弱的地方。因此，头一次使法国失掉所占领的米兰，只需要一位洛多维科公爵在边境揭竿而起就成了，但是要使法国国王再一次失去米兰，那就必须使全世界都反对他，②必须把他的军队打败并将其驱逐出意大利，其原因如上。
+这样一来，当你占领一个国家领土之后，所有受到伤害的人民都会成为你的敌人。你无法再取得这些人民的支持，因为你无法满足他们所期望的，你也不能采取强有力的措施对付他们，因为你会觉得辜负了人民的恩义。纵然你实力强大，进入地方之后，你还是需要获得地方人民的好感和支持。人民期望好的境遇，所以支持法国国王路易十二世迅速占领米兰。法国又迅速的失去了米兰，只需洛多维科①的军队就做到了。凡是曾经叛变不断的地方，再度被征服之后，就不会很容易的失去，因为统治者会趁叛乱时机，毫不犹豫地惩办罪犯，摸清可疑分子，并且加强自己薄弱的地方。因此，头一次使法国失掉所占领的米兰，只需要一位洛多维科公爵在边境揭竿而起就成了，但是要使法国国王再一次失去米兰，那就必须使全世界都反对他，②必须把他的军队打败并将其驱逐出意大利，其原因如上。
 
 > ①洛多维科(LodovicoSforza，1476—1500)，米兰公爵；1499年2月法国国王路易十二世(在位：1498—1515)同威尼斯人结盟，9月11日法军攻占米兰，洛多维科逃亡德国。威尼斯人亦分占米兰公国的三分之一。次年2月在反法国军队的米兰了，因为原先给法国国王打开城门的人民，后来察觉到他们的见解和他们曾经期待将来获得的利益都是上当受骗的，他们不能够忍受新君主的折磨了。
 
@@ -14,41 +14,41 @@
 
 > 可是，米兰毕竟一而再地两度从法国人手里夺取过来。关于头一次丧失的一般原因已经讨论过了，现在还要谈谈第二次丧失的原因，并且看一下法国国王当时有什么办法，以及任何一个人如果身临其境要比法国国王更牢固地保有他征服的领土能够有什么办法。
 
-米兰毕竟还是两度从法国人手里夺了回来。头一次丧失原因已述，那是因为人民期望有更好的境遇，现在要谈谈第二次丧失的原因，并且看一下法国国王当时都用了什么办法。假使你也身临其境在此，是否有比法国国王更好的办法，来保护自己所征服的领土呢。
+米兰毕竟还是两度从法国人手里夺了回来。头一次丧失原因已述，那是因为人民对自己的境遇还是感到很失望，现在要谈谈第二次丧失的原因，并且看一下法国国王能有什么办法。任何一个身临其境的人，是否有比法国国王更好的办法，来保护自己所征服的领土呢？
 
 > 让我说，那些被胜利者合并到自己的古老国家的国家，或者与征服的国家属于同一地区，使用同一语言，或者并非如此，二者必居其一。如果是同一地区的话，特别是如果那些国家的人们不是起义帮助下，洛多维科归国迅速光复米兰。但其后又被法军挫败，死于监狱。
 
-被征服的国家，与征服的国家属于同一地区，使用同一种语言，或者并非如此，二者必居其一。如果是统一地区的话，特别是，如果那些国家的人民不是起义来帮助其统治的，洛多维科归国迅速光复米兰，但其后又被法军挫败，死于监狱。 ( @todo 不够畅通 )
+被征服的国家，与征服的国家属于同一地区，使用同一种语言，或者并非如此，二者必居其一。如果是同一地区的话，特别是，如果那些国家的人民不是起义来帮助其统治的，洛多维科归国迅速光复米兰，但其后又被法军挫败，死于监狱。 ( @todo 不够畅通 )
 
 > 过惯了自由生活的话，那末保有这些国家是最容易的；而且只要灭绝过去统治他们的君主的血统，就能够牢固地保有这些国家了。由于在其他的事情上维持着他们的古老状态，而且在风俗习惯上没有什么不同之处，人们就会安然地生活下去。正如人们在布列塔尼、布尔戈尼、加斯科涅和诺曼底所看到的，这些地方已经长时期地归属于法国了；①而且尽管语言有某些差异，可是习惯是相同的，因此它们很容易结合在一起。征服这些地方的人如果想要保有它们，就必须注意两个方面：一方面就是，要把它们的旧君的血统灭绝；另一方面就是既不要改变它们的法律，也不要改变它们的赋税。这样一来，在一个极短的期间内，它们就会同古老的王国变成混然一体了。
 
-国家下的人民过着自由的生活，想统治这样的国家，是比较容易的。只要将过去统治他们的君主消灭，就能牢固的统治这样的国家。因为，在他们的事情上维持的是之前他们的状态，而且在风俗习惯上也没有什么不同之处，人们就会安然的生活下去。正如人们在布列塔尼、布尔戈尼、加斯科涅和诺曼底所看到的，这些地方已经长期的归属于法国了。①而且尽管语言上有某些差异，但是习惯是相同的，因此他们很容易结合在一起。想要统治征服的领土，就需要注意两个方面：一，要把他们旧的君主血统灭绝。二，既不要改变他们的法律，也不要改变他们的赋税。这样一来，在一个极短的时间内，就能同被征服的王国变成浑然一体了。
+国家下的人民现已过着自由的生活，统治这样的国家，是比较容易的。只要将统治他们的君主消灭，就能牢固的统治。因为，除了统治者不同，在其他事情上维持的是之前状态，在风俗习惯上也没有什么不同，人们就会安然的生活下去。正如人们在布列塔尼、布尔戈尼、加斯科涅和诺曼底所看到的，这些地方已经长期的归属于法国了。①而且尽管语言上有某些差异，但是习惯是相同的，因此很容易就能把这些地方结合在一起。想要统治征服的领土，就需要注意两个方面：一，把人民原有的统治者消灭。二，既不要改变原有的法律，也不要改变原有的赋税。这样一来，在极短的时间内，就能同被征服的国家融合、统一了。
 
 > ①以上各地归并于法国的时期：布尔戈尼为1477年(路易十一世)、布列塔尼为1491年(查理八世)、加斯科涅为1453年(查理七世)、诺曼底为1204年(菲利普二世)。
 
 > 但是，如果那些被征服的国家在语言、习惯和各种制度上同征服国不同，那末就会发生种种困难了。要保有那些被征服的国家，就需要非常的好运并作出巨大的努力。而最好和最有力的办法之一，也许是征服者亲自前往，驻节在那里。这就会使得他的占领地更加稳固，更加持久，例如土耳其人在希腊就是这样作的。①假使土耳其国王不移跸希腊，那么，即使他为着保有希腊而采取其他一切办法，他还是不能够保有那个国家的。因为如果一个人在当地的话，骚乱一露头他就能够察觉了，从而他就能够迅速地加以消除。但是如果他不在跟前，那么，只有在大乱的时候他才能够察觉，那时他已经不再能够消除骚乱了。除此之外，那个地方不受他的官吏掠夺；臣民由于能够立即求助于君主而感到满意。因此，那些愿意做良民的人势必更加爱戴君主，而那些别有怀抱的人则势必更加害怕他。至于那些想从外部进攻这个国家的人，就必须非常谨慎，因为当君主驻节其地之日，想把它从君主手里夺取过来是极困难的。
 
-如果那些被征服的国家在语言、习惯和各种制度上同征服国不同，那么就会有种种困难了。要保有那些被征服的国家，就需要有非常的运气并作出巨大的努力。最好最有力的办法之一，也许是征服者亲自前往，驻节在那里。这就会使占领地更加稳固，更加持久。例如土耳其人在希腊就是这样做的。①假使土耳其国王不驻节在希腊，即使采取其他一切办法，还是不能够保有希腊的。因为，驻节在当地的话，骚乱一露头就能够察觉，从而就能够迅速地加以消除。如果不在当地，只有在大乱的时候才能够察觉，那时已经不再能够消除骚乱了。除此之外，还能使那个地方不受官吏掠夺；臣民也能够立即求助于君主，进而能够让臣民感到满意。那些愿意做良民的人势必更加爱戴君主，那些别有用心的人则势必更加害怕驻节在这里的国王。至于那些想从外部进攻这个国家的人，就必须非常谨慎，因为君主驻节在这里的时候，想从君主手里夺取走它是极困难的事情。
+如果那些被征服的国家在语言、习惯和各种制度上有所不同，那么就会有种种困难了。要统治这样的国家，就需要特别的好运和付出巨大的努力。最好最有力的办法之一，也许是君主自前往，驻扎在那里。这就会使占领地更加稳固，更加持久。例如土耳其人在希腊就是这样做的。①假使土耳其国王不驻节在希腊，即使采取其他一切办法，还是不能够保有希腊的。驻扎在占领地，骚乱一露头就能够察觉，就能够迅速的消除。如果不在当地，只有大乱才能够察觉，那时已经不再能够消除骚乱了。除此之外，还能使那个地方不受官吏掠夺；人民也能够立即求助于君主，进而能够让人民感到满意。那些愿意做良民的人势必更加爱戴君主，那些别有用心的人则势必更加害怕。至于那些想从外部进攻这个国家的人，就必须非常谨慎，因为君主驻扎在这里的时候，想从君主手里夺取走它是极困难的事情。
 
 > ①此处所称希腊，实指土耳其人在十五世纪征服巴尔干半岛。先是穆拉德二世(MuradⅡ，1421—1451)开始远征匈牙利、希腊、阿尔巴尼亚等国，其后穆罕默德二世(1451—1481)继续扩张：于1453年灭拜占庭帝国，并将奥斯曼帝国的首都移至君士坦丁堡，改名伊斯坦布尔，从而确立了土耳其在欧洲的势力。
 
 > 另一个更好的对策，就是在一两处可以说是那个国家要害②之地派遣殖民，因为这样做是必要的，否则就有必要在那里驻扎大批步兵和骑兵，二者必择其一。而君主在殖民这件事情上不用花费许多钱财；他无需花费，或者只要支出很少费用就能够移送殖民，并且使他们驻屯在那里。而君主所触犯的人们只是因为他们的田地房舍被拿去给新来的殖民的一些人，而这些人只是那个国家的极少数的一部分人。同时被触犯的这些人仍然散居各方并且仍然是贫困的，因此是永远不能够对君主为害的；而且，所有其余的人都没有受到侵害，因此对他们加以安抚是容易不过的。同时，由于他们害怕自己遭遇将如同那些被掠夺的人们一样，他们就战战兢兢不敢犯错误。
 
-另一个更好的对策，在那个国家一两个要害之地派遣殖民，这样做是必要的，否则就有必要在那里驻扎大批步兵和骑兵，二者必择其一。君主在殖民这件事情上不用花费许多钱财，无需花费，或者只要支出很少费用就能够移送殖民，并且使他们驻屯在那里。那些受到君主所触犯的人，只是因为他们的田地房舍被拿去给新来的殖民了，而且这些人只是极少数的一部分人。同时，被触犯的人，任然散居在各个地方，而且很贫穷。因此这些人，并不能对君主形成任何威胁。而且，其余的大部分人都没有受到君主或殖民的侵害，因此对他们加以安抚是再容易不过的。同样，他们害怕自己也被掠夺，因此会变得战战兢兢不敢犯错误。
+另一个更好的对策，在占领地的一两个要害之处派遣殖民，这样做是必要的，否则就有必要在那里驻扎大批军队，二者必择其一。在殖民这件事情上不会花费很多钱财，无需花费或者只需支出很少费用就能够派遣殖民，并且驻扎在那里。虽然派遣的殖民会占用当地人的田地房舍，但也是极少一部分的人，他们散居在各处，并且很贫穷，所以，虽然他们受到了侵犯，但是并不能对君主形成任何威胁。而且，其余的大部分人都没有受到侵犯，对他们加以安抚是很容易的。同样，没有受到侵害的人，害怕自己也被侵害和掠夺，将会变得战战兢兢不敢犯错。
 
 > ②“要害”原文为拉丁文“compedes”意即关键或重要据点(ccppi)。
 
 > 我的结论是：这种殖民并不靡费，而且比较忠实可靠，触犯的人也较少；而被触犯的人，正如上面已经说过的，既贫困而且散居各方，是不能为害的。关于这一点，必须注意的是：对人们应当加以爱抚，要不然就应当把他们消灭掉；因为人们受到了轻微的侵害，能够进行报复，但是对于沉重的损害，他们就无能为力进行报复了。所以，我们对一个人加以侵害，应当是我们无需害怕他们会报复的一种侵害。
 
-我的结论是：派遣殖民并不靡费，而且比较忠实可靠，触犯的人也较少；而被触犯的人，既贫困又散居各方，是不会有威胁的。有一点必须注意：对人们应当加以爱抚，要不然就应当把他们消灭掉；因为人们受到了轻微的侵害，就会进行报复，但是对于沉重的损害，他们就无能为力进行报复了。所以，要侵害一个人，就应当要做到不再害怕他会进行报复。
+我的结论是：派遣殖民并不靡费，而且比较忠实可靠，侵犯的人也较少；而被侵犯的人，既贫困又散居各方，不会有威胁。有一点必须注意：对人们应当加以爱抚，要不然就应当把他们消灭掉；因为人们受到了轻微的侵害，就会进行报复，但是对于沉重的打压，他们将会无力进行报复。要侵犯他，就应当不再害怕他会报复。
 
 > 但是如果在那里以驻屯军队来代替殖民的话，由于维持驻屯军不得不把那个国家获得的全部收入耗费掉，这样耗费就更多了；结果所得反而变成损失，而且得罪的人就更多了，因为由于他的军队从这里到那里辗转调动，那个国家全部受到损害，对此每一个人都感到痛苦，于是一个个都变成他的仇敌了。他们虽然被打败了，可是仍然在他们自己的老家里，是能够为害的敌人。因此，无论从哪方面说来，驻屯军队是不中用的，而殖民却是有益的。
 
-如果以驻屯军队来代替殖民，就需要耗费更多的收入，以维持军队，甚至不得不把从那个国家获得的全部收入都耗费掉，耗费得是在是太多了。本来是有所得，现在就变成损失了，而且得罪的人更多了。军队行军辗转调动，国家耗费巨大，大家都会感到痛苦，也会变成仇敌。被占领国家的人民，虽然是被打败了，但是他们任然在他们自己的老家里，他们还是有威胁的。因此，无论从哪方面说来，驻屯军队是不中用的，而殖民却是有益的。
+如果以驻扎军队来代替派遣殖民，就需要耗费更多的收入，以维持军队，甚至不得不把从那个国家获得的全部收入都耗费掉。本来是有所得，现在就变成有所失了，而且得罪的人更多了。军队行军打仗国家耗费巨大，人民也会感到痛苦，这将会使他们变成敌人。被占领国的人，虽然是被打败了，但是他们任然在他们自己的故乡里，他们还是有威胁性的。无论从哪方面说来，驻扎军队是不中用的，而派遣殖民却是有益的。
 
 > 再说，一个君主如果占有上面所说的在语言、习惯和各种制度上同本国不同的地区，他就应当使自己成为那些较弱小的邻近国家的首领和保护者，并且设法削弱它们当中较强大的势力，同时要注意不让任何一个同自己一般强大的外国人①利用任何意外事件插足那里。而且常常会发生这样的情况：那些心怀不满的本地人，由于分外野心或者由于恐惧，把外国人引进来了。正如大家所知道的，罗马人就是由埃托利亚人给引入希腊的；①而且罗马人过去侵入的任何地方都是由那个地方的人给引入的。事情的经过常常是这样的：当一个强大的外国人一旦侵入一个地区的时候，在这个地区里所有那些较弱小的势力，由于对那个凌驾在他们头上的强大势力的嫉妒作祟，就会立即依附这个入侵的外国人。因此把这些弱小的势力笼络过来并不需要什么气力；因为他们全体会立即甘心情愿同他所已经征服的国家联结成为一体。他只要注意不要让他们取得太大的力量和太大的权威；他依靠自己的力量并且在他们的帮助下，是能够很容易迫使那些较强大的势力屈服的，从而能够继续成为这个地区的完全的主宰。但是如果他没有把这件事情处理好，他就会很快地把已经赢得的一切丧失掉，而且当他拥有这个地区的时候，他会感到无限的困难与烦恼。
 
-再说，一个君主如果占有在语言、习惯和各种制度上同本国不同的地区，他就应当使自己成为那些较弱小的邻近国家的首领和保护者，并且设法削弱他们当中较强大的势力，同时要注意，不让任何一个同自己一般强大的外国人①利用任何意外事件插足那里。常常会发生这样的事情：那些心怀不满的本地人，由于分外野心或者由于恐惧，把外国人引进来。埃托利亚人把罗马人引入了希腊；①罗马人过去侵入过很多地方，而且都是当地人把罗马人引入进来的。经过常常是这样的，当一个强大的外国人一旦侵入一个地区，在这个地区里所有那些较弱小的势力，就会立即依附这个入侵的外国人，因为那个凌驾在他们头上的强大势力的嫉妒作祟。把这些弱小的势力笼络过来并不需要什么气力，因为他们全部都会立即心甘情愿同他所已经征服的国家联结成为一体。注意不要让他们取得太大的力量和太大的权威，他们依靠自己的力量并且在得到帮助的情况下，是能够很容易迫使那些较强大的势力屈服的，从而能够继续成为这个地区完全的主宰。但是如果他没有把这件事情处理好，他就会很快地把已经赢得的一切丧失掉，而且当他拥有这个地区的时候，他会感到无限的困难与烦恼。
+再说，如果占领国在语言、习惯和各种制度上同本国不同，君主应当使自己成为那些较弱小邻近国家的首领和保护者，并且设法削弱他们当中较强大的势力，同时要注意，不让任何一个同自己一般强大的外国人①利用任何意外事件插足那里。常常会发生这样的事情：那些心怀不满的人民，由于野心勃勃或由于恐惧，把外国人引进来。埃托利亚人把罗马人引入了希腊；①罗马人过去侵入过很多地方，而且都是当地人把罗马人引入进来。经过常常是这样的，一个强大的外国一旦侵入一个地方，这个地区里所有较弱小的势力，就会立即依附这个入侵的外国人，因为那个凌驾在他们头上的强大势力的嫉妒作祟。把这些弱小的势力笼络过来并不需要什么气力，因为他们全部都会立即心甘情愿同入侵者融为一体。注意不要让哪些弱小的国家取得太大的力量和太大的权威，他们依靠自己的力量，并且在得到帮助的情况下，是能够很容易迫使那些较强大的势力屈服的，从而能够继续成为这个地区完全的主宰。但是如果他没有把这件事情处理好，他就会很快地把已经赢得的一切丧失掉，而且当他拥有这个地区的时候，他会感到无限的困难与烦恼。
 
 ①强大的外国人(unoforestierepotente)，意指强大的外国君主。
 
