重命名和内容整理

--- a/09 论市民的君主国.md
+++ b/09 论市民的君主国.md
@@ -10,13 +10,10 @@
 
 斯巴达国王纳比德①，抵御了全希腊人和一支罗马常胜军的围攻，保卫了他的国家和自己的地位不受他们侵害；当危难降临他头上的时候，他需要做的不过是使少数人无能为害；但是假使人民已经同他敌对的话，这就不够了。对于我的这条见解，谁都不要拿一句陈腐的谚语：“以人民为基础，譬如筑室于泥沙”来进行反驳。因为如果一位平民把他的基础建立在人民之上，并且深信当自己受敌人或者官吏压迫的时候人民将会解救自己，那末这句谚语是中肯的。在这种情况下，如同罗马的格拉奇②和佛罗伦萨的乔治·斯卡利③的遭遇一样，他往往发现自己上当了。但是，如果把基础建立在人民之上的人是一位君主，而且他能够指挥，是一个勇敢的人，处逆境而不沮丧，不忽视其他的准备，并且以其精神意志与制度措施激励全体人民，这样一个人是永远不会被人民背弃的，而且事实将会表明他已经把基础打好了。
 
-①纳比德(Nabide)，斯巴达国王(在位：公元前206或207—192)，以贪婪、酷虐著名。后被罗马军暗杀。
+>①纳比德(Nabide)，斯巴达国王(在位：公元前206或207—192)，以贪婪、酷虐著名。后被罗马军暗杀。
 
-②格拉奇(Gracchi)指由平民选出的有名的古罗马护民官格拉古兄弟蒂贝里奥和卡伊奥(Tiberio和CaioGracco，
-公元前163—133，153—121)。二人分别于公元前133年和121年，在罗马贵族所挑起的反对他们的骚乱中被杀害；他们曾经采取一些有利于    平民的措施，但似乎未获得人民的坚决支持。
+>②格拉奇(Gracchi)指由平民选出的有名的古罗马护民官格拉古兄弟蒂贝里奥和卡伊奥(Tiberio和CaioGracco，公元前163—133，153—121)。二人分别于公元前133年和121年，在罗马贵族所挑起的反对他们的骚乱中被杀害；他们曾经采取一些有利于    平民的措施，但似乎未获得人民的坚决支持。
 
-③乔治·斯卡利(GiorgioScali)，十四世纪，佛罗伦萨下层民众领袖之一，与汤姆马索·斯托齐(Tommasostorzzi)结党。于1382年1月17日    被捕杀害。
+>③乔治·斯卡利(GiorgioScali)，十四世纪，佛罗伦萨下层民众领袖之一，与汤姆马索·斯托齐(Tommasostorzzi)结党。于1382年1月17日被捕杀害。
 
 这种市民的君主国从平民政制(ordinecivile)转向专制政治的时候，往往处于危险状态。因为这类君主不是由自己亲自指挥就是通过官吏进行指挥的。在后一种场合，君主的地位是更加软弱无力和更加危险的，因为他们完全依靠那些被任命当官的人们的意志；而后者，特别是在危难时期，不是采取行动反对君主就是拒不服从君主，这就很容易篡权夺位。君主在危难中已经来不及行使绝对的权力了，因为市民和属民已经接受官吏的命令惯了，在这种危急之秋不会服从君主的命令，而且在动荡不安之日，君主往往缺乏自己能够信赖的人。这种君主不能够以太平时期所看到的情况作为根据。因为在太平时期市民们对国家都有所需求，当时每一个人都为国家奔走，每个人都满口答应；而且当远离死亡之境的时候，他们全都准备为他而死；但是到了危难时期，当国家对市民有所需求的时候，能找到的人就寥寥无几了。而这种经历是极其危险的，它只能经历一遭就再没有机会了。因此，一个英明的君主应该考虑一个办法，使他的市民在无论哪一个时期对于国家和他个人都有所需求，他们就会永远对他效忠了。
-
-
