--- a/10 怎样衡量君主国的力量.md
+++ b/10 怎样衡量君主国的力量.md
@@ -1,4 +1,6 @@
-# 10 应该怎样衡量一切君主国的力量
+# 10 怎样衡量君主国的力量
+
+应该怎样衡量一切君主国的力量
 
 在研究这些君主国性质的时候，必须考虑另一点，也就是说，一个君主在困难的时候是否能够依靠自己的力量屹立不移，抑或是常常需要他人的援助。为了更清楚地说明这一点，我要说：我认为如果由于人口众多或者财力充裕能够募集足够的军队，同任何入寇者决战于疆场，他们就是能够依靠自己的力量屿立不移的人。另一方面，我认为，如果不能够同敌人决战于疆场，而只是被迫躲在城墙后面进行防御，他们就是常常需要他人援助的人。关于第一种情况，已经讨论过了，但是以后遇有机会，我们还需要再谈一谈。关于第二种情况，我只有鼓励这种君主为自己的城市森严壁垒、备足粮草，对于乡村则不要有任何顾虑，除此以外，我再没有什么话可说的了。任何人如果给他的城市作好了城防工事，至于同臣民的关系则依照上面指出的、以后还要谈到的方法进行处理，那么人们向他进攻总得慎重考虑一番，因为人们对于一项计划如果预见其中有困难总是不喜欢的，而且君主已经给他的城市作好了城防工事，同时他的人民又不仇恨他，如要对这样一位君主进攻，可以预见这不是一件容易的事情。
 
