--- a/12 论军队的种类与雇佣军.md
+++ b/12 论军队的种类与雇佣军.md
@@ -6,10 +6,10 @@
 
 要我证明这一点是毫不费力的，因为现在意大利崩溃不是由于别的原因，而是由于她许多年来依赖雇佣军，虽然他们先前曾经帮助某些人取得进展，并且在彼此之间显得勇猛不过，可是当外敌压境的时候，他们就原形毕露。因此，法国国王查理〔八世〕“拿着粉笔”①就能够不费吹灰之力而占据意大利。有人说，其原因是由于我们的罪过，他说的确是真实情况，②可是这并不是他所想象的那些罪过，而是我已经论述的那些罪过。因为那是君主们的罪过，所以他们也受到了惩罚。
 
-①原文“拿着粉笔(石膏)”(colgesso)，是引用教皇亚历山大六世形容法国查理八世征服意大利轻而易举所说的俏皮话。据说，在1494年    查理穿过意大利时没有遭到抵抗，因此教皇亚历山大常说法国人侵入意大利，手里拿着粉笔(石膏)，只要在那里画上标记就能够在那里安    营扎寨，而无需拿着剑进行战斗。
+①原文“拿着粉笔(石膏)”(colgesso)，是引用教皇亚历山大六世形容法国查理八世征服意大利轻而易举所说的俏皮话。据说，在1494年查理穿过意大利时没有遭到抵抗，因此教皇亚历山大常说法国人侵入意大利，手里拿着粉笔(石膏)，只要在那里画上标记就能够在那里安营扎寨，而无需拿着剑进行战斗。
 
 ②萨沃那罗拉在1494年11月1日早就预言法国查理八世将要入侵。
-后来他指出其原因在于意大利、罗马和佛罗伦萨的渎神、残暴和作恶多端。但马基雅维里则把此种不幸归罪于放弃军事训练，使佛罗伦萨    无能力自卫。
+后来他指出其原因在于意大利、罗马和佛罗伦萨的渎神、残暴和作恶多端。但马基雅维里则把此种不幸归罪于放弃军事训练，使佛罗伦萨无能力自卫。
 
 我想进一步论证这种军队的不可靠。雇佣军的首领们或者是能干的人，或者是不能干的人，二者必居其一。如果他们是能干的，你可不能够信赖他们，因为他们总是渴求自我扩张；因此不是压迫自己的主人——你，就是违反你的意思压迫他人。反之，如果首领是无能的人，他往往使你毁灭。如果有人回答说，不论是否雇佣军，只要手中掌握了武器，都是一样行动的。对此，我回答说，当君主或共和国必须用兵时，君主必须身临前敌，并且亲自挂帅。共和国则必须委派自己的公民前往，如果被派的人结果力不胜任，就必须予以撤换；如果其人胜任其事，则必须用法律加以约束，不要让他越出指示范围。经验已经证明，只有君主自己和武装起来的共和国才能够取得巨大的进展，而雇佣军只能造成损失。而且要使一个用自己的武装力量武装起来的共和国服从它的某一个公民的支配，比一个靠外国武力武装起来的国家远为困难。
 
@@ -49,17 +49,14 @@
 你一定了解，晚近在意大利，皇权开始受到排斥，而教皇在世俗事务方面却取得了更大的声势，意大利已分裂成为更多的国家；因为在大城市当中有许多城市武装起来反对那些先前受皇帝宠爱、压迫自己的贵族，同时教会也赞助他们，以便扩大自己在世俗方面的声势。而在其他许多城市中，他们的市民也变成了君主。这样一来，意大利就几乎全部落在教廷和一些共和国手里，而组成教廷的神父们和支配共和国的市民们由于不谙军事，两者都开始招募外国人当兵。使这类军队赫赫有名的头一个人，就是罗马尼阿人阿尔贝里戈·达·科尼奥①。布拉奇奥和斯福尔扎——还有其他的人——就是由这个人训练出来的。这两个人就是当时意大利的主宰。继他们之后，又来了其他雇佣军将领，他们指挥意大利的军队以迄今日。然而他们的勇武带来的结果，却是使意大利遭受查理〔八世〕的蹂躏②、路易〔十二世〕的掠夺③、费尔迪南多的摧残①和瑞士人的凌辱②。
 
 ①阿尔贝里戈·达·科尼奥(AlberigodaConio)即阿尔贝里戈·达·巴尔比亚诺(AlberigodaBarbiano，1344—1409)，
-罗马尼阿的库尼奥的    伯爵(contediCunio)，是纯粹意大利式雇佣军连队的创始人。曾组成著名的“圣乔治兵团”，并任该团首领。
+罗马尼阿的库尼奥的伯爵(contediCunio)，是纯粹意大利式雇佣军连队的创始人。曾组成著名的“圣乔治兵团”，并任该团首领。
 
 ②查理八世，法国国王(1470—1498)，1494—1496年曾侵入意大利佛罗伦萨、那波利，后被逐。
 
 ③路易十二世，法国国王(1498—1515)，曾占领米兰，同西班牙瓜分那波利(1500)，后被逐。
 
-①费尔迪南多(Ferdinando1452—1516)，西班牙国王，曾出兵援助那波利驱逐法国查理八世入侵，作为侵略意大利的手段；
-后于1500年与法国路易十二世瓜分那波利；1508年与德、法、西班牙及教皇合谋瓜分威尼斯，
-其后为了争夺意大利同法国作战(1511—1513)。
+①费尔迪南多(Ferdinando1452—1516)，西班牙国王，曾出兵援助那波利驱逐法国查理八世入侵，作为侵略意大利的手段；后于1500年与法国路易十二世瓜分那波利；1508年与德、法、西班牙及教皇合谋瓜分威尼斯，其后为了争夺意大利同法国作战(1511—1513)。
 
 ②法国路易十二世征服米兰，曾得瑞士人帮助。其后瑞士人在教皇朱利奥怂恿下又独自征服米兰。
 
 他们过去所采取的政策，首先是贬低步兵的声势，借以抬高自己的声势。他们之所以这样做，就是因为他们没有自己的领土，而是依靠受雇佣的收入来维持生活的。然而为数区区的步兵是不能够使他们赢得声势的，但是他们又没有能力供养许多步兵；因此，他们改为依靠骑兵，他们使相当数量的骑兵获得供养并且受到尊崇。结果是：在一支两万人的军队中，步兵不及两千人。除此之外，这些将领们还采取各种方法来减轻自己和士兵们的劳苦和危险，在战斗中不进行屠杀而是活捉俘虏，而且不要求赎金即予以释放。他们并不夜袭城市，城市的防军亦不夜袭野营。他们在军营的周围既不树立栏栅，或者挖掘壕沟，在冬季也不出征。所有这些事情是他们的兵法所允许的，并且，正如我已经讲过的，这是他们为着避免疲劳和危险这两者而想出来的办法。这样一来，他们就使意大利陷入奴隶状态和屈辱之中。
-
