--- a/14 军事责任.md
+++ b/14 军事责任.md
@@ -1,4 +1,5 @@
-# 14 君主关于军事方面的责任
+# 14 军事责任
+君主关于军事方面的责任
 
 君主除了战争、军事制度和训练之外，不应该有其他的目标、其他的思想，也不应该把其他事情作为自己的专业，因为这是进行统帅的人应有的唯一的专业①。它的效力②不仅能够使那些生下来就当君主的人保持地位，而且有许多次使人们从老百姓的地位一跃而高踞王位。反之，大家都知道，君主沉醉于安逸比对关心军事想得更多便亡国。亡国的头一个原因就是忽视这种专业，而使你赢得一个国家的原因，就是因为你精通这门专业。
 
@@ -33,6 +34,3 @@
 
 ③色诺芬(Senofonte，公元前434？—351)希腊史学家。苏格拉底弟子。
 曾从斯巴达军队，助波斯王子小居鲁士与其兄争位，战败率兵涉险返国，著《远征记》述其经过。
-
-
-
