--- a/15 论赞扬与责难.md
+++ b/15 论赞扬与责难.md
@@ -1,4 +1,5 @@
-# 15 论世人特别是君主受到赞扬或者受到责难的原因
+# 15 论赞扬与责难
+论世人特别是君主受到赞扬或者受到责难的原因
 
 现在尚待考察的是，君主对待臣下和朋友应该采取的方法和行动。关于这一点，我知道有许多人已经写过文章，现在我也写起文章来，特别是当我讨论这个问题的时候，我的观点与别人的不同，因此，我恐怕会被人认为倨傲自大①。
 可是，因为我的目的是写一些东西，即对于那些通晓它的人是有用的东西，我觉得最好论述一下事物在实际上的真实情况，而不是论述事物的想象方面。许多人②曾经幻想那些从来没有人见过或者知道在实际上存在过的共和国和君主国。可是人们实际上怎样生活同人们应当怎样生活，其距离是如此之大，以至一个人要是为了应该怎样办而把实际上是怎么回事置诸脑后，那么他不但不能保存自己，反而会导致自我毁灭。因为一个人如果在一切事情上都想发誓以善良自持，那么，他厕身于许多不善良的人当中定会遭到毁灭。所以，一个君主如要保持自己的地位，就必须知道怎样做不良好的事情，并且必须知道视情况的需要与否使用这一手或者不使用这一手。
