--- a/17 论残酷与仁慈.md
+++ b/17 论残酷与仁慈.md
@@ -1,4 +1,5 @@
-# 17 论残酷与仁慈，被人爱戴是否比被人畏惧来得好些
+# 17 论残酷与仁慈
+论残酷与仁慈，被人爱戴是否比被人畏惧来得好些
 
 现在谈谈前面①列举的另一种品质。我认为，每一位君主都一定希望被人认为仁慈而不是被人认为残酷。可是他必须提防不要滥用这种仁慈。切萨雷·博尔贾是被人认为残酷的。尽管如此，他的残酷却给罗马尼阿带来了秩序，把它统一起来，并且恢复和平与忠诚。如果我们好好地考虑到这一点，就会认识到博尔贾比佛罗伦萨的人们仁慈得多了，因为后者为着避免残酷之名反而让皮斯托亚②被毁灭了。所以君主为着使自己的臣民团结一致和同心同德，对于残酷这个恶名就不应有所介意，因为除了极少数的事例之外，他比起那些由于过分仁慈、坐视发生混乱、凶杀、劫掠随之而起的人说来，是仁慈得多了，因为后者总是使整个社会受到损害，而君主执行刑罚不过损害个别人罢了。在所有的君主当中，新的君主由于新的国家充满着危险，要避免残酷之名是不可能的。维琪尔借迪多(Dido)的口说道：“严峻的形势、崭新的邦家，命我森严壁垒，警戒着海角天涯。”①
 
