--- a/18 守信.md
+++ b/18 守信.md
@@ -1,4 +1,6 @@
-# 18 论君主应当怎样守信
+# 18 守信
+
+论君主应当怎样守信
 
 任何人都认为，君主守信，立身行事，不使用诡计，而是一本正直，这是多么值得赞美呵！然而我们这个时代的经验表明：那些曾经建立丰功伟绩的君主们却不重视守信，而是懂得怎样运用诡计，使人们晕头转向，并且终于把那些一本信义的人们征服了。
 
@@ -12,7 +14,7 @@
 
 君主既然必需懂得善于运用野兽的方法，他就应当同时效法狐狸与狮子。由于狮子不能够防止自己落入陷阱，而狐狸则不能够抵御豺狼。因此，君主必须是一头狐狸以便认识陷阱，同时又必须是一头狮子，以便使豺狼惊骇。然而那些单纯依靠狮子①的人们却不理解这点。所以，当遵守信义反而对自己不利的时候，或者原来使自己作出诺言的理由现在不复存在的时候，一位英明的统治者②绝不能够，也不应当遵守信义。假如人们全都是善良的话，这条箴言就不合适了。但是因为人们是恶劣的，而且对你并不是守信不渝的，因此你也同样地无需对他们守信。一位君主总是不乏正当的理由为其背信弃义涂脂抹粉。关于这一点，我能够提出近代无数的实例为证，它们表明：许多和约和许多诺言由于君主们没有信义而作废和无效；而深知怎样做狐狸的人却获得最大的成功。但是君主必须深知怎样掩饰这种兽性，并且必须做一个伟大的伪装者和假好人。人们是那样地单纯，并且那样地受着当前的需要所支配，因此要进行欺骗的人总可以找到某些上当受骗的人们。
 
-①原文“...insullòne”，意谓“总是象狮子般行动，使用公开的暴力”。 
+①原文“...insullòne”，意谓“总是象狮子般行动，使用公开的暴力”。
 
 ②此处马基雅维里改用“一位明智的统治者”(unosignoreprudente)。
 
@@ -27,4 +29,3 @@
 因此，一位君主应当十分注意，千万不要从自己的口中溜出一言半语不是洋溢着上述五种美德的说话，并且注意使那些看见君主和听到君主谈话的人都觉得君主是位非常慈悲为怀、笃守信义、讲究人道、虔敬信神的人。君主显得具有上述最后一种品质，尤其必要。人们进行判断，一般依靠眼睛更甚于依靠双手，因为每一个人都能够看到你，但是很少人能够接触你；每一个人都看到你的外表是怎样的，但很少人摸透你是怎样一个人，而且这些少数人是不敢反对多数人的意见的，因为后者受到国家最高权威的保护。对于不能够向法院提出控诉的一切人的行动，特别是君主的行动，人们就注意其结果。所以，一位君主如果能够征服并且保持那个国家的话，他所采取的手段总是被人们认为是光荣的，并且将受到每一个人的赞扬。因为群氓总是被外表和事物的结果所吸引，而这个世界里尽是群氓。当多数人能够站得住脚的时候，少数人是没有活动的余地的。当代的某一位君主①——我现在不便点名，——除了和平与信义之外，从来不宣扬其他事情，但是他对这两者的任何一者都是极端仇视的。然而假使他曾经遵守其中任何一者，那么，他的名望或者他的权力就不免三番五次被人攫取了。
 
 ①指西班牙的“天主教徒”费尔迪南多。他死于1516年1月23日，如果马基雅维里写作时点名，对于马基雅维里显然是不利的。
-
