--- a/19 论蔑视与憎恨.md
+++ b/19 论蔑视与憎恨.md
@@ -1,5 +1,7 @@
 # 19 论应该避免受到蔑视与憎恨
 
+论应该避免受到蔑视与憎恨
+
 关于前面提到的君主的品质①，我已经论述其中最重要的一些品质，现在我想根据下述总纲扼要地讨论其余的品质。这条总纲就是正如前面已经稍微提到的②，君主必须考虑怎样避免那些可能使自己受到憎恨或者轻视的事情。如果他能够避免这些事情，他就尽到自己的本份了，即使有其他丑行也不会有什么危险。
 
 正如我已经说过的③，贪婪，霸占臣民的财产及其妇女，特别使君主被人衔恨；因此，他必须避免这两件事情。当大多数人的财产和体面都没有受到侵犯的时候，他们就安居乐业，君主只需要同很少数人的野心进行斗争，他可以有许多方法并且轻而易举地把这些人控制住。
