--- a/20 论有益与无益.md
+++ b/20 论有益与无益.md
@@ -1,4 +1,6 @@
-# 20 堡垒以及君主们每日做的其他许多事情是有益的还是无益的
+# 20 论有益或无益
+
+堡垒以及君主们每日做的其他许多事情是有益的还是无益的
 
 某些君主为着牢靠地统治国家，就解除了他们的属民的武装；另一些君主将所属的各个城市分裂；又一些君主则树敌反对他们自己；又一些君主则努力把他们开始统治时怀疑过的人们争取过来；又一些君主则兴建堡垒，而有些君主则破坏并摧毁堡垒。虽然，对于这一切事情要做出确定性的判断，除非掌握了某些采取过某种类似决定的国家的具体情况，否则是办不到的，但是我想在这个问题本身所允许的范围内一般地谈一谈。
 
