--- a/21 为人.md
+++ b/21 为人.md
@@ -1,4 +1,6 @@
-# 21 君主为了受人尊敬应当怎样为人
+# 21 为人
+
+君主为了受人尊敬应当怎样为人
 
 世上没有任何事情比得上伟大的事业和作出卓越的范例，能够使君主赢得人们更大的尊敬。在我们的时代里，阿拉冈国王费尔迪南多②，即当今的西班牙国王，就是一个例子。他由于自己的盛名与光荣，从一个弱小的君主，一跃而为基督教世界中首屈一指的国王，因此他几乎可以称作一位新君主。如果注意观察他的行动，将会看到它们全部都是最伟大的，而且其中有些是卓越非凡的。在他开始统治的时候，他进攻格拉纳达；这项事业就奠定了他的国家的基础。一开始，他从容不迫地行事，并且毫不害怕遭到任何阻碍。他使卡斯蒂利亚的贵族们的精神灌注在这件事业上面，只考虑那场战争而不考虑革新的事情。与此同时，他赢得盛名和驾驭贵族的统治权，而他们还没有察觉。他依靠教会和人民的金钱得以维持他的军队，并且在长期的战争中，给他的武装力量奠定了基础，而这支武装力量一直给他带来了荣誉。除此之外，为了更好地实现更伟大的计划，他常常利用宗教作为借口，他乞灵于宗教上的残酷，把马拉尼人①从他的王国驱逐出去并且把他们掠夺一空。在世界上再找不到比这个事例更悲惨和罕见的了。他披着同样的宗教外衣进攻非洲，然后征伐意大利，最终进攻法国。②这样，他经常地完成了一件大事又安排着另一件大事，通过这些大事使他的臣民的心神始终忐忑不安同时惊叹不已，注意着这些事情的结果。而他的这些行动都是一个接一个地出现的，在这一行动和另一行动之间没有一点空隙，使人们不能够从容不迫地进行反对他的活动。
 
