--- a/22 论臣.md
+++ b/22 论臣.md
@@ -1,4 +1,6 @@
-# 22 论君主的大臣
+# 22 论臣
+
+论君主的大臣
 
 通选大臣，对于君主说来实在是一件重大的事情；他们是否良臣，取决于君主的明智。人们对于一位君主及其能力的第一个印象，就是通过对他左右的人们的观察得来的，如果左右的人们是有能力的而且是忠诚的，他就常常能够被认为是明智的，因为他已经知道怎样认识他们的能力并且使他们忠贞不渝。但是如果他们不是这样的人，人们就往往会对他作出不好的判断，因为他所犯的第一个错误就是出在此项选择上。
 
@@ -7,4 +9,3 @@
 ①安托尼奥·达·韦纳弗罗(MesserAntoniodaVenafro)最优秀的法学家，是潘多尔福·佩特鲁奇的干练而可靠的大臣。
 
 但是一位君主怎样能够识别一位大臣，这里有一条历试不爽的方法：如果你察觉该大臣想着自己甚于想及你，并且在他的一切行动中追求他自己的利益，那末这样一个人就绝不是一个好的大臣，你绝不能信赖他；因为国家操在他的手中，他就不应该想着他自己，而应该只想着君主，并且决不想及同君主无关的事情。另一方面，为了使大臣保持忠贞不渝，君主必须常常想着大臣，尊敬他，使他富贵，使他感恩戴德，让他分享荣誉，分担职责；使得他知道如果没有自己，他就站不住，而且他已有许多荣誉使他更无所求，他已有许多财富使他不想更有所得，而且他已负重任使他害怕更迭。因此，当大臣们以及君主和大臣们的关系是处于这样一种情况的时候，他们彼此之间就能够诚信相孚；如果不如此，其结果对此对彼都总是有损的。
-
