--- a/23 谄媚者.md
+++ b/23 谄媚者.md
@@ -1,4 +1,6 @@
-# 23 应该怎样避开谄媚者
+# 23 谄媚者
+
+应该怎样避开谄媚者
 
 我不想略去一件重要的事情，在这件事情上，君主如果不是十分审慎或者不是很好地选择，他们就很难保护自己不犯错误。这就是来自谄媚者的危险，这种人充满朝廷。因为人们对自己的事情是如此地自满自足，并且自己欺骗自己，以致他们难以防御这种瘟疫；而且如果他们想防御的话，他们就要冒着被人轻视的危险。因为一个人要防止人们阿谀谄媚，除非人们知道对你讲真话不会得罪你，此外没有别的办法；但是，当大家能够对你讲真话的时候，对你的尊敬就减少了。
 
@@ -13,5 +15,3 @@
 因此，一位君主应该常常征求意见，但是应该在他自己愿意的时候，而不是在他人愿意的时候；另一方面，对于他不征询意见的任何事情，他应该使每一个人都没有提意见的勇气。但是，他必须是一位经常不断的征询意见者，而且关于他征询意见的一切事情，他必须是一位耐心倾听真话的聆听者。如果他了解到任何人不论出于任何原因，不把真话告诉他，他应该赫然震怒。因为许多人认为任何赢得英明之誉的君主，其所以致此，不是由于他的本质，而是由于他身边有一些好的顾问，毫无疑问，那是误解了。因为这里有一条从来颠扑不破的一般法则：一位君主如果不是本人明智的话，他就不可能很好地获得忠告；除非碰运气，他把自己寄托在某一个人身上，完全由后者支配，而此人恰好是一个极为英明的人。在这种场合，君主可能过得很好，然而日子长不了，因为那个支配者在短促的时间内会把他的国家篡夺过来。但是，当所谘询的人不只一个人的时候，君主如果不明智就绝不能够获得统一的忠言，自己也不知道怎样把它们统一起来；那些顾问每个人都想着他自己的利益，而君主却不能矫正或者洞察他们。情况不可能是两样的，因为除非某种需要驱使人们必须对你忠诚外，他们总是变成邪恶的。
 
 因此必须得出这样的结论：一切良好的忠言，不论来自任何人，必须产生于君主的贤明，而不是君主的贤明产生于良好的忠言。
-
-
