--- a/25 命运.md
+++ b/25 命运.md
@@ -1,4 +1,6 @@
-# 25 命运在人世事务上有多大力量和怎样对抗
+# 25 命运
+
+命运在人世事务上有多大力量和怎样对抗
 
 我不是不知道，有许多人向来认为，而且现在仍然认为，世界上的事情是由命运和上帝支配的，以至人们运用智虑亦不能加以改变，并且丝毫不能加以补救；因此他们断定在人世事务上辛劳是没有用的，而让事情听从命运的支配，这种意见在我们这个时代就更觉得可信，因为过去已经看到而且现在每天看到世事的重大变幻远在每个人的预料之外。
 
@@ -19,4 +21,3 @@
 因此我得出的结论是：当命运正在变化之中而人们仍然顽强地坚持自己的方法时，如果人们同命运密切地调协，他们就成功了；而如果不协调，他们就不成功。我确实认为是这样：迅猛胜于小心谨慎，因为命运之神是一个女子，你想要压倒她，就必须打她，冲击她。人们可以看到，她宁愿让那样行动的人们去征服她，胜过那些冷冰冰地进行工作的人们。因此，正如女子一样，命运常常是青年人的朋友，因为他们在小心谨慎方面较差②，但是比较凶猛，而且能够更加大胆地制服她。
 
 ②此处译文根据M.Casella和M.Bonfantini等校订本；但G.Mazzoni校订本作“(他们)不是小心谨慎”，与此不同。
-
