--- a/26 解放意大利.md
+++ b/26 解放意大利.md
@@ -1,4 +1,6 @@
-# 26 奉劝将意大利从蛮族手中解放出来
+# 26 解放意大利
+
+奉劝将意大利从蛮族手中解放出来
 
 现在考虑了上面讨论过的全部事情，并且自己思量：意大利此时此刻是不是可以给一位新的君主授予荣誉的吉日良辰，是不是现在有某种要素给一位贤明的有能力的君主提供一个机会，让他采取某种方式，使自己获得荣誉，并且给本国人民带来普遍的幸福；我觉得许多事情合在一起都是对新君主有利的，我不知道什么时候比现在对君主的行动更合适。而且正如我所说过的①，如果为了表现摩西的能力，必须使以色列人在埃及成为奴隶，为了认识居鲁士精神的伟大，必须使波斯人受梅迪人压迫，为了表现提修斯的优秀，必须使雅典人分散流离；那么在当代，为了认识一位意大利豪杰的能力，就必须使意大利沉沦到它现在所处的绝境，必须比希伯来人受奴役更甚，必须比波斯人更受压迫，必须比雅典人更加流离分散，既没有首领，也没有秩序，受到打击，遭到劫掠，被分裂，被蹂躏，并且忍受了种种破坏。
 
