--- a/13 论援军、混合军和本国的军队.md
+++ b/13 论援军、混合军和本国的军队.md
@@ -6,11 +6,9 @@
 
 虽然在古代历史上，这样的实例比比皆是，但是我不想离开教皇朱利奥二世这个新近的例子，他那个决定是再糊涂不过的：他因为想占领费拉拉，于是把自己置于一个外国人的手里，只是由于他的好运发生了第三种情况，才使他没有吃到他这种轻率抉择的苦果。因为他的援军在拉文纳被击溃之后，瑞士人奋起把征服者驱逐出去——这是同他和其他人的预料完全相反的。这样一来，由于他的敌人已经逃走了，他才不致成为他的敌人的俘虏。同时教皇已经由于援军以外的其他军队获胜了，也没有成为自己的援军的俘虏。佛罗伦萨人自己完全没有武装起来，却派遣一万名法国兵去进攻皮萨①，他们这种作法比起他们以前任何危难时期都更加危险。君士坦丁堡的皇帝②为了反对他的邻国，派遣上万名土耳其军队到希腊，战事结束的时候，他们不肯离境，这就是希腊受异教徒奴役的开端。
 
-①1500年佛罗伦萨人从法王路易十二那里获得了八千瓜斯科人(Guasconi)和瑞士人以便夺回皮萨，但进攻失败。
-由于这些军队难带，以至人们宁愿把它解散。
+①1500年佛罗伦萨人从法王路易十二那里获得了八千瓜斯科人(Guasconi)和瑞士人以便夺回皮萨，但进攻失败。由于这些军队难带，以至人们宁愿把它解散。
 
-②即乔万尼·坎达库泽诺(GiovanniCantacuzeno，1300—1383)，同帕莱奥洛吉(Paleologhi)因拜占庭王权内讧(1341—1347)，
-于1346年同土耳其苏丹结盟，苏丹派了自己的儿子去帮助他并出兵希腊，这就成为土耳其人在欧洲扩张的第一基地。
+②即乔万尼·坎达库泽诺(GiovanniCantacuzeno，1300—1383)，同帕莱奥洛吉(Paleologhi)因拜占庭王权内讧(1341—1347)，于1346年同土耳其苏丹结盟，苏丹派了自己的儿子去帮助他并出兵希腊，这就成为土耳其人在欧洲扩张的第一基地。
 
 因此，谁不想胜利，就利用这种援军吧！他们带来的危险比雇佣军多得多，因为援军到来也就造成了毁灭的条件，他们全体团结一致，而且完全听从外国人的命令。可是，就雇佣军而论，如果他们获得胜利，他们要加害于你，却需要更长的时间和较好的机会。雇佣军并不是一个整体，他们是由你找来并发给军饷的，而且由你委派第三者担任他们的头头，这个第三者是不能够立即取得足够的权威来加害于你的。总之，就雇佣军而论，其懒散怯懦是最危险的；若就援军而论，其英勇慓悍却是最可怕的。
 
