--- a/19 论蔑视与憎恨.md
+++ b/19 论蔑视与憎恨.md
@@ -6,11 +6,11 @@
 
 正如我已经说过的③，贪婪，霸占臣民的财产及其妇女，特别使君主被人衔恨；因此，他必须避免这两件事情。当大多数人的财产和体面都没有受到侵犯的时候，他们就安居乐业，君主只需要同很少数人的野心进行斗争，他可以有许多方法并且轻而易举地把这些人控制住。
 
-①见第15章。
+>①见第15章。
 
-②见第15、16、17章。
+>②见第15、16、17章。
 
-③见第17章。
+>③见第17章。
 
 君主如果被人认为变幻无常、轻率浅薄、软弱怯懦、优柔寡断，就会受到轻视。因此，他必须象提防暗礁一样提防这一切。他应该努力在行动中表现伟大、英勇、严肃庄重、坚忍不拔。关于臣民的私事问题，他所作的决断应该是不可更改的。而且，他应该支持人们对他抱有这样一种见解：谁都不要指望欺骗他或者瞒过他。
 
@@ -20,17 +20,17 @@
 
 但是，关于臣民的问题，当没有外患的时候，君主不得不害怕的只是他们秘密地搞阴谋。关于这一点，如果君主避免引起臣民的憎恨和轻视，使人民对他感到满意，他就能够坐稳江山了。正如我上面已经详细申述的②，这是君主必需做到的一件事情。一位君主要能够对抗一切阴谋，最有效的办法之一就是不要受到广大人民憎恨，因为搞阴谋的人总是指望把君主置诸死地来取悦于人民；但是，如果阴谋者认为那样做只能激怒人民的话，他就不会有勇气实现这样一类的意图了。因为，阴谋者将要遭遇到无限的困难。经验证明：自古以来，阴谋为数很多，而曾经成功者甚少，因为搞阴谋的人都不能够单枪匹马地干。而且，除了那些他认为是心怀不满的人们之外，不能够找到别的人合伙同谋。但是，一旦你向一个不满之徒吐露你的意图，你就给他一个使他可以获得满足的方法，因为他显然可以期待从这里取得各种好处，①当他看到：站在这一方面利益是确定的，而站在另一方面则是不确定的并且充满着危险，如果他笃守信义，他就是你的罕有的朋友，否则就是君主的非常顽固不化的敌人。
 
-②见第9章、第17章。
+>②见第9章、第17章。
 
-①意谓将阴谋向君主告发的人可以指望获得重赏。
+>①意谓将阴谋向君主告发的人可以指望获得重赏。
 
 现在把这件事扼要地说一下。我认为，在阴谋者这方面，除了怀着恐惧、妒忌、担心受到令人丧胆的刑罚之外，再没有别的东西了；但是在君主这方面，有的是一国之君的威严、法律，他的盟友和国家对他的保护，除此之外，还有人民的好感。因此，任何人都不可能那样轻举妄动地搞阴谋。同时，一般阴谋者，在为非作恶之前都不得不有所畏惧；在这种情况之下，由于阴谋者是人民的敌人，他在为非作恶之后，也一定是害怕的，并且因此决不能够指望获得任何藏身之所。
 
 关于这个问题，可以举出无数的实例，但是我想举一个例子就够了，这个例子在我们的父亲这一辈人当中还记得它是怎样发生的。先前波洛尼亚的君主梅塞尔·安尼巴莱·本蒂沃利②，即当今的梅塞尔·安尼巴莱的祖父，是被坎尼斯基家族搞阴谋杀害的，当时除尚在幼龄的梅塞尔·焦万尼①外，安尼巴莱·本蒂沃利家族没有一个人幸存。可是在他被杀死之后，人民立即起来把坎尼斯基家族全部杀死了。这是由于当时本蒂沃利家族在波洛尼亚获得人民的好感是非常有力的。虽然在安尼巴莱死后能够统治这个国家的人一个也没有残存下来，可是当波洛尼亚的人们听说，在佛罗伦萨有一个过去一直被人当作铁匠的儿子、其实是本蒂沃利家族的后裔，他们就到佛罗伦萨迎接他，并且把这个城市的政府交给他。这个城市就由这个人统治，直到梅塞尔·焦万尼长大能够亲政为止。
 
-②梅塞尔·安尼巴莱·本蒂沃利(MesserAnnibaleBentivogli)于1445年被波洛尼亚另一个大家族首领巴蒂斯塔·坎尼斯基    (BattistaCanneschi)杀害，但遭到群众反对，巴蒂斯塔·坎尼斯基亦被杀死。
+>②梅塞尔·安尼巴莱·本蒂沃利(MesserAnnibaleBentivogli)于1445年被波洛尼亚另一个大家族首领巴蒂斯塔·坎尼斯基(BattistaCanneschi)杀害，但遭到群众反对，巴蒂斯塔·坎尼斯基亦被杀死。
 
-①梅塞尔·焦万尼·本蒂沃利(MesserGiovanniBentivogli，1438—1508)，安尼巴莱·本蒂沃利之子。
+>①梅塞尔·焦万尼·本蒂沃利(MesserGiovanniBentivogli，1438—1508)，安尼巴莱·本蒂沃利之子。
 其父被杀时，他才七岁。长大后在波洛尼亚执政(1462—1504)。
 
 因此，我的结论是：当人民对君主心悦诚服的时候，君主对于那些阴谋无需忧心忡忡；但是如果人民对他抱有敌意，怀着怨恨的话，他对任何一件事，对任何一个人就必然提心吊胆。
@@ -39,13 +39,11 @@
 
 法国是我们这个时代里组织得最好、统治得最好的王国之一。在这个国家里，我们看到法国国王的自由与安全赖以维持的优越的制度无数之多。其中主要的一个制度就是“议会”①及其权力。因为建立这个王国的人知道权力者②的野心和他们的傲慢，认定有必要在他们的嘴上套上制动机来约束他们；另一方面，因为君主知道人民由于惧怕贵族从而怨恨贵族，君主便设法使他们感到安全，但是，他又不想把这种事情作为君主特别照料的事情，于是，为着避免自己由于袒护人民而受到贵族非难，同时为了避免由于袒护贵族而受到人民的物议，国王就设立作为第三者的裁判机关③，这个裁判机关可以弹劾贵族，维护平民，而用不着国王担负责任。对于国王和王国说来，世界上再没有比这个制度更好、更审慎，再没有比这个方法更安全的了。由此，我们又可以获得另一个值得注意的结论：君主务必把担带责任的事情委诸他人办理，而把布惠施恩的事情自己掌管。我们还可以得出结论说：君主因此必须看重贵族，但是不应该因此使自己为人民所恨。
 
-①“议会”(“parlamento”即法语的“parlement”)这个机构在法国大革命前的职能与现代“议会”不同，它在路易九世的1254年，
-以“法国议会”或者“巴黎议会”之名，开始作为中央的皇家法院建立起来；
-其后菲利普四世于1302年召开第一次“三级会议”，使这个机构进一步确立。
+>①“议会”(“parlamento”即法语的“parlement”)这个机构在法国大革命前的职能与现代“议会”不同，它在路易九世的1254年，以“法国议会”或者“巴黎议会”之名，开始作为中央的皇家法院建立起来；其后菲利普四世于1302年召开第一次“三级会议”，使这个机构进一步确立。
 
-②权力者(potenti)，此处实指贵族。
+>②权力者(potenti)，此处实指贵族。
 
-③第三者的裁判机关(unoiudiceterzo)指上述“议会”。
+>③第三者的裁判机关(unoiudiceterzo)指上述“议会”。
 
 有些人研究了罗马皇帝的生平与死亡，也许会觉得，实例同我的见解相反，因为他们察觉在罗马皇帝当中有些人立身行事一向卓尔不凡，而且表现出精神伟大的品质，然而，这些皇帝都丧失了自己的帝国，并且被那些谋反的臣民杀害了。
 
@@ -53,26 +51,25 @@
 
 我觉得，列举那些继承罗马帝国帝位的皇帝们，上起哲学家马尔科①下至马西米诺②为例就足够了。这些皇帝包括马尔科、他的儿子科姆莫多③、佩尔蒂纳切④、尤利亚诺⑤、塞韦罗⑥、其子安托尼诺·卡拉卡拉⑦、马克里诺⑧、埃利奥加巴洛⑨、亚历山大[10]和马西米诺。
 
-①马尔科·奥雷利奥(MarcoAurelio，121—180)，罗马皇帝(160—180)，以斯多噶派哲学家出名，著有《沉思录》。
+>①马尔科·奥雷利奥(MarcoAurelio，121—180)，罗马皇帝(160—180)，以斯多噶派哲学家出名，著有《沉思录》。
 
-②朱利奥·韦罗·马西米诺(GiulioVeroMassimino，173—238)，罗马皇帝(235—238)，被自己的军队杀害。
+>②朱利奥·韦罗·马西米诺(GiulioVeroMassimino，173—238)，罗马皇帝(235—238)，被自己的军队杀害。
 
-③科姆莫多(CommodoMarcoAurelio，169—192)，罗马皇帝(180—192)。
+>③科姆莫多(CommodoMarcoAurelio，169—192)，罗马皇帝(180—192)。
 
-④普布利奥·埃尔维奥·佩尔蒂纳切(PublioElvioPertinace)，罗马皇帝(193年)，在位仅八十七日被叛军杀害。
+>④普布利奥·埃尔维奥·佩尔蒂纳切(PublioElvioPertinace)，罗马皇帝(193年)，在位仅八十七日被叛军杀害。
 
-⑤马尔科·迪迪奥·尤利亚诺(MarcoDidioIuliano)，193年佩尔蒂纳切被杀后立为罗马皇帝，在位六十六日被元老院所杀。
+>⑤马尔科·迪迪奥·尤利亚诺(MarcoDidioIuliano)，193年佩尔蒂纳切被杀后立为罗马皇帝，在位六十六日被元老院所杀。
 
-⑥塞蒂米奥·塞韦罗(L.SettimioSevero，146—211)，罗马皇帝(193—211)。
+>⑥塞蒂米奥·塞韦罗(L.SettimioSevero，146—211)，罗马皇帝(193—211)。
 
-⑦安托尼诺·卡拉卡拉(AntoninoCaracalla，188—217)，罗马皇帝(211—217)。
+>⑦安托尼诺·卡拉卡拉(AntoninoCaracalla，188—217)，罗马皇帝(211—217)。
 
-⑧马尔科·奥佩利奥·马克里诺(MarcoOpelioMacrino，164—218)，217年谋杀卡拉卡拉成功后，为罗马皇帝，218年被杀死。
+>⑧马尔科·奥佩利奥·马克里诺(MarcoOpelioMacrino，164—218)，217年谋杀卡拉卡拉成功后，为罗马皇帝，218年被杀死。
 
-⑨埃利奥加巴洛(Eliogabalo)即瓦里奥·阿维托·巴西亚诺(VarioAvitoBassiano，204—222)，
-以卑劣的怪癖出名，马克里诺被杀后，为罗马皇帝(218—222)，222年，时十八岁，被杀死。
+>⑨埃利奥加巴洛(Eliogabalo)即瓦里奥·阿维托·巴西亚诺(VarioAvitoBassiano，204—222)，以卑劣的怪癖出名，马克里诺被杀后，为罗马皇帝(218—222)，222年，时十八岁，被杀死。
 
-[10]亚历山大·塞韦罗(AlessandroSeviero，208—235)，罗马皇帝(222—235)，在一次军事暴动中被杀害。
+>[10]亚历山大·塞韦罗(AlessandroSeviero，208—235)，罗马皇帝(222—235)，在一次军事暴动中被杀害。
 
 首先应该注意的是：在别的国家里，君主只需要同贵族的野心、同人民的傲慢不逊进行斗争就行了，可是罗马的皇帝们却有第三种困难：必须容忍他们的军队的残暴与贪婪，而这是一件很困难的事情。它曾经是很多皇帝灭亡的原因，因为要同时满足军队和人民这两方面是困难的。这是因为人民酷爱和平，所以总是喜爱温和谦逊的君主；而另一方面，军队却喜欢具有尚武精神的、残暴贪婪的君主。
 
@@ -94,9 +91,9 @@
 
 塞韦罗想要成为整个帝国的主宰，在这之后，他还有两项困难。其一在亚洲，亚洲军队的统帅尼格罗②已在那里自己称帝；其二在西方，有个阿尔皮诺③在那里，正在执政，也觊觎帝国。
 
-①斯基亚沃尼亚(Stiavonia)，地在今日南斯拉夫斯洛文尼亚附近。
+>①斯基亚沃尼亚(Stiavonia)，地在今日南斯拉夫斯洛文尼亚附近。
 
-②尼格罗(PascennioNigro)，194年称帝，195年被士兵所杀。③阿尔皮诺(DecioClodioSettimioAlbino)，193年称帝，197年被杀。
+>②尼格罗(PascennioNigro)，194年称帝，195年被士兵所杀。③阿尔皮诺(DecioClodioSettimioAlbino)，193年称帝，197年被杀。
 
 塞韦罗认为，如果暴露自己，同时与两者为敌是危险的，于是决心袭击尼格罗，而对阿尔皮诺则进行欺骗。他给阿尔皮诺写信说，他被元老院选为皇帝，愿意同阿尔皮诺共同享受这个尊荣，所以赠送后者以恺撒的称号，并且由元老院决定，加封后者作为他的同袍。对于这些事情，阿尔皮诺竟信以为真。可是，在塞韦罗打败并杀死了尼格罗，并且解决了东方事件之后，他回到罗马，就向元老院申诉说，阿尔皮诺忘记了从他那里获得的恩惠，正在使用阴谋诡计企图杀害他，因此，他必须对阿尔皮诺的忘恩负义加以惩罚。其后，塞韦罗在法国找到了阿尔皮诺，于是把阿尔皮诺的政权和生命一并剥夺了。
 
@@ -116,10 +113,10 @@
 
 至于埃利奥加巴洛、马克里诺、尤里亚诺等人，我就不打算议论了，因为他们都是十足可鄙的，所以很快就给消灭了。但是我想就上面的论述总结一下。我认为，我们这个时代的君主们要使自己政府的军队特别满意，其困难比往时减少了，因为尽管他们必须对那些军队给以某些照顾，可是如有任何困难很快就获得解决了。我们这个时代的任何一位君主都没有一支军队象罗马帝国的军队那样，同政府和地方行政当局一道根深蒂固。如果说，在罗马帝国时代，满足军人比满足人民更有必要，那末现在所有的君主，除了土耳其皇帝和苏丹①之外，满足人民倒是比满足军人更有必要，因为现在人民比军人更有力量了。
 
-①指君士坦丁堡的苏丹和埃及的苏丹。1517年埃及王国合并于土耳其。
+>①指君士坦丁堡的苏丹和埃及的苏丹。1517年埃及王国合并于土耳其。
 
 我所以把土耳其皇帝除外，这是因为他身边经常拥有一万二千名步兵和一万五千名骑兵，土耳其王国的安全和力量就是依靠他们。因此君主必须同他们保持友好关系，而把其他一切事情放在后头。苏丹统治的王国①也是同样的。这个王国完全在军人的手中。因此，苏丹也不管人民怎样，必须同军人保持友好关系。但是必须注意：苏丹国家同其他一切君主国都不相似。它类似天主教的教皇制，既不能称作世袭君主国，亦不能称作新的君主国；因为以前的君主的子孙并不是作为他的继承人，依继承权统治的，王位继承人是由享有特权的人们选举出来的人。这是一个古老的惯例，因为这个君主国并没有新建立的君主国所遭遇的任何一种困难，所以不能被称为新的君主国。虽然君主是新的，可是这个国家的秩序却是旧的，而且它安排迎接当选的君主，仿佛他就是世袭君主似的。
 
-①此处所称苏丹统治的王国指埃及王国。它完全在著名的骑兵队(mammalu—cehi)控制之下。
+>①此处所称苏丹统治的王国指埃及王国。它完全在著名的骑兵队(mammalu—cehi)控制之下。
 
 现在回到我们的本题吧。我想，任何人只要考虑以上论述就会了解到：上述的皇帝们灭亡的原因或者是仇恨，或者是轻蔑；并且还会认识到：在那些皇帝当中若干人是这样子行动，若干人的行动则与之相反，但是在每一类行动中，只有一个人获得幸福的结果，而其余的人则不幸以终。因为对于同是新君主的佩尔蒂纳切和亚历山大说来，想要模仿那个根据继承权世袭王位的马尔科，不但徒劳无益而且是要吃亏的。同样地，对于卡拉卡拉、科姆莫多、马西米诺说来，想要模仿塞韦罗是极其危险的事情，因为他们没有足够的能力使自己能够追踪塞韦罗。
