--- a/21 为人.md
+++ b/21 为人.md
@@ -7,36 +7,24 @@
 再说，一位君主，如果类似关于米兰的贝尔纳博③的传说那样作，当遇到任何人在社会生活中作出不寻常的事情——无论是好事或者坏事，他就抓紧机会在内政管理方面作出罕见的范例，选择人们必定大谈特谈的关于给以奖励或惩罚的方法。这对于君主是大有帮助的。而最重要的是，一位君主必须依靠他的行动去赢得伟大人物与才智非凡的声誉。
 
 
-①原题拉丁文：“Ouodprincipemdeceatutegregiushabeatur”.Casella等几个意文本均译作“……为了受人尊敬……”
-(“…perchòsiastimato…”)，但有的意文本译作“……要赢得声誉……”(“peracquistarsireputazione”)。
+>①原题拉丁文：“Ouodprincipemdeceatutegregiushabeatur”.Casella等几个意文本均译作“……为了受人尊敬……”(“…perchòsiastimato…”)，但有的意文本译作“……要赢得誉……”(“peracquistarsireputazione”)。
 
-②费尔迪南多〔二世〕(FerdinandodiAragona，1452—1516)，西班牙王国的创建者。
-原为阿拉冈的国王，后与卡斯蒂利亚的伊萨贝拉(IsabelladiCastiglia)结婚，又成为卡斯蒂利亚的统治者。
-在意大利，他占有半岛的南部全部和西西里岛。经过十年战争，格拉纳达于1492年被费尔迪南多征服，于是全部统一西班牙。
+>②费尔迪南多〔二世〕(FerdinandodiAragona，1452—1516)，西班牙王国的创建者。原为阿拉冈的国王，后与卡斯蒂利亚的伊萨贝拉(IsabelladiCastiglia)结婚，又成为卡斯蒂利亚的统治者。在意大利，他占有半岛的南部全部和西西里岛。经过十年战争，格拉纳达于1492年被费尔迪南多征服，于是全部统一西班牙。
 
-①对穆斯林和改信基督教的西班牙的希伯来人，称为马拉尼人(Marrani)，这是带有侮辱性的外号。
+>①对穆斯林和改信基督教的西班牙的希伯来人，称为马拉尼人(Marrani)，这是带有侮辱性的外号。
 他们在1501—1502年被驱逐出西班牙，以后并多次被赶逐，对西班牙王国的繁荣造成严重的损害。
 
-②在对北非的远征中，1509年费尔迪南多曾占领其沿岸；如前所述，他为了同法国路易十二瓜分那波利王国而入侵意大利。
-后又重新转向非洲以取得伦巴底(1501—1504；1511—1512)。
+>②在对北非的远征中，1509年费尔迪南多曾占领其沿岸；如前所述，他为了同法国路易十二瓜分那波利王国而入侵意大利。后又重新转向非洲以取得伦巴底(1501—1504；1511—1512)。
 
-③贝尔纳博(messerBernabòViscounti，1354—1385)，米兰公爵。
-此人以残暴和行为怪异出名，他在政治上的能力和敏锐性也是突出的。据故事家讲，贝尔纳博奇行甚多。
-例如，公爵曾遇见乡人掘墓；问之，据告，因旅行者已死，无遗产，教父及教堂掘墓人以不获报酬拒不处理遗体。
-公爵即传讯，二人声称：“本人应取得所值。”公爵即说：“谁人能付汝所值？死者无钱何能付汝所值？”
-二人答道：“不论何人付给，吾人应得所值？”于是公爵说：“我付给你们，你们所值即死亡。
-该死者在何处，即取来，埋于墓中；捕教父投诸墓内。掘墓人何在？投诸墓中，掩埋之。”
-于是公爵使教父及掘墓人与死者同葬后，扬长而去。
+>③贝尔纳博(messerBernabòViscounti，1354—1385)，米兰公爵。此人以残暴和行为怪异出名，他在政治上的能力和敏锐性也是突出的。据故事家讲，贝尔纳博奇行甚多。例如，公爵曾遇见乡人掘墓；问之，据告，因旅行者已死，无遗产，教父及教堂掘墓人以不获报酬拒不处理遗体。公爵即传讯，二人声称：“本人应取得所值。”公爵即说：“谁人能付汝所值？死者无钱何能付汝所值？”二人答道：“不论何人付给，吾人应得所值？”于是公爵说：“我付给你们，你们所值即死亡。该死者在何处，即取来，埋于墓中；捕教父投诸墓内。掘墓人何在？投诸墓中，掩埋之。”于是公爵使教父及掘墓人与死者同葬后，扬长而去。
 
 当一位君主是一个人的真正朋友或者是一个人的真正敌人时，就是说，如果他公开表示自己毫无保留地赞助某方而反对另一方的话，这位君主也会受到尊重。他采取这种方法总是比保持中立更有用处。因为如果你的两个强大的邻国相打起来的话，情况必定是这样：它们当中一国战胜的时候，你必须害怕这个战胜国，或者你不用害怕它。在这两种情况之中，无论将来出现哪一种情况，你公开表态并且勇猛地参战总是有好处的。因为，如果在前一种情况之下，你不公开表态，你将来总要成为胜利者的战利品，而使那个战败者因而感到高兴和满意，而且你还提不出任何理由和任何事情为你辩护，或者使人庇护你，因为胜利者不需要在处于逆境时不援助自己的可疑的朋友；那个失败者也不会庇护你，因为你过去不愿拿起武器同他共命运。
 
-   安蒂奥科应埃托利亚的召唤，为了驱逐罗马人进入希腊①，他派遣使节们到罗马人的朋友——阿凯亚人那里，鼓励他们保持中立。而另一方面，罗马人却劝说阿凯亚人为他们拿起武器。这件事情就提到阿凯亚的会议上进行审议，安蒂奥科的使者在那里劝说他们保持中立；对此罗马的使者回答说：“这些人所说的要你们不介入战争，这同你们的利益相差十万八千里。如果没有友谊，没有尊重，你们将成为胜利者的战利品。”②
+安蒂奥科应埃托利亚的召唤，为了驱逐罗马人进入希腊①，他派遣使节们到罗马人的朋友——阿凯亚人那里，鼓励他们保持中立。而另一方面，罗马人却劝说阿凯亚人为他们拿起武器。这件事情就提到阿凯亚的会议上进行审议，安蒂奥科的使者在那里劝说他们保持中立；对此罗马的使者回答说：“这些人所说的要你们不介入战争，这同你们的利益相差十万八千里。如果没有友谊，没有尊重，你们将成为胜利者的战利品。”②
 
-①事在公元前192年，参看第3章。
+>①事在公元前192年，参看第3章。
 
-②此处见李维著《罗马史》第35卷第48节。
-原文拉丁文：“Quodautemistidicuntnoninterponendivòsbello，nihilmagisalienuinrebusvestrisest；
-sinegratia，sinedigmtate，premiumvictoriseritis”(原著与马基雅维里引语略有出入)。
+>②此处见李维著《罗马史》第35卷第48节。原文拉丁文：“Quodautemistidicuntnoninterponendivòsbello，nihilmagisalienuinrebusvestrisest；sinegratia，sinedigmtate，premiumvictoriseritis”(原著与马基雅维里引语略有出入)。
 
 事情总是这样：他如果不是你的朋友，就要求你采取中立；而他如果是你的朋友，则要求你拿起武器公开表态。但是优柔寡断的君主，为了避免当前的危难，常常采取中立的道路，而且常常因此被人灭了。但是，当君主明确地表态赞助一方时，如果和你联合的一方获胜的话，虽然胜利者是强有力的，你要听他支配，但是他对你仍然负有一种义务，他已经同你建立了友好的关系；而且人们也绝不会这样地不要脸，作为忘恩负义的例子压迫你。再说，胜利从来不会那样彻底以致胜利者不需要有某些考虑，特别是对于正义的考虑。即使你支持的一方失败了，你仍然会受到他的忆念，在他有能力的时候，他会帮助你，你变成可能东山再起的命运的伴侣。
 
