--- a/23 谄媚者.md
+++ b/23 谄媚者.md
@@ -8,9 +8,9 @@
 
 关于这个问题，我想引述当代的一个例子。当今的皇帝马西米利阿诺①的宠臣卢卡神父②谈及皇帝陛下时说。皇帝从不谘询任何人的意见，而且又从来未能按照自己的愿望行事。这是由于他采取了同上述的相反的方法。因为这位皇帝是一位好守秘密的人，他既不把自己的计划通知任何人，亦不听取关于这些计划的任何意见。但是当他把这些计划付诸实施的时候，它们就开始为人们知悉和发现，并开始受到他周围的人们反对。于是他很轻易地就改弦易辙。结果，他今日所做的事情，到了第二天就推翻了；谁也不理解他想的是什么或者打算做什么事情，并且不能够信赖他的决定。
 
-①马西米利阿诺(Maximiliano，1459—1519)，1486年当选为神圣罗马帝国皇帝，但从未加冕。
+>①马西米利阿诺(Maximiliano，1459—1519)，1486年当选为神圣罗马帝国皇帝，但从未加冕。
 
-②卢卡神父(PreteLucaRinaldi)是马西米利阿诺的大使，1507年马基雅维里出使时直接认识。
+>②卢卡神父(PreteLucaRinaldi)是马西米利阿诺的大使，1507年马基雅维里出使时直接认识。
 
 因此，一位君主应该常常征求意见，但是应该在他自己愿意的时候，而不是在他人愿意的时候；另一方面，对于他不征询意见的任何事情，他应该使每一个人都没有提意见的勇气。但是，他必须是一位经常不断的征询意见者，而且关于他征询意见的一切事情，他必须是一位耐心倾听真话的聆听者。如果他了解到任何人不论出于任何原因，不把真话告诉他，他应该赫然震怒。因为许多人认为任何赢得英明之誉的君主，其所以致此，不是由于他的本质，而是由于他身边有一些好的顾问，毫无疑问，那是误解了。因为这里有一条从来颠扑不破的一般法则：一位君主如果不是本人明智的话，他就不可能很好地获得忠告；除非碰运气，他把自己寄托在某一个人身上，完全由后者支配，而此人恰好是一个极为英明的人。在这种场合，君主可能过得很好，然而日子长不了，因为那个支配者在短促的时间内会把他的国家篡夺过来。但是，当所谘询的人不只一个人的时候，君主如果不明智就绝不能够获得统一的忠言，自己也不知道怎样把它们统一起来；那些顾问每个人都想着他自己的利益，而君主却不能矫正或者洞察他们。情况不可能是两样的，因为除非某种需要驱使人们必须对你忠诚外，他们总是变成邪恶的。
 
