--- a/15 论赞扬与责难.md
+++ b/15 论赞扬与责难.md
@@ -2,15 +2,13 @@
 论世人特别是君主受到赞扬或者受到责难的原因
 
 现在尚待考察的是，君主对待臣下和朋友应该采取的方法和行动。关于这一点，我知道有许多人已经写过文章，现在我也写起文章来，特别是当我讨论这个问题的时候，我的观点与别人的不同，因此，我恐怕会被人认为倨傲自大①。
+
 可是，因为我的目的是写一些东西，即对于那些通晓它的人是有用的东西，我觉得最好论述一下事物在实际上的真实情况，而不是论述事物的想象方面。许多人②曾经幻想那些从来没有人见过或者知道在实际上存在过的共和国和君主国。可是人们实际上怎样生活同人们应当怎样生活，其距离是如此之大，以至一个人要是为了应该怎样办而把实际上是怎么回事置诸脑后，那么他不但不能保存自己，反而会导致自我毁灭。因为一个人如果在一切事情上都想发誓以善良自持，那么，他厕身于许多不善良的人当中定会遭到毁灭。所以，一个君主如要保持自己的地位，就必须知道怎样做不良好的事情，并且必须知道视情况的需要与否使用这一手或者不使用这一手。
 
 
-①自本章开始，马基雅维里摆脱当时在欧洲占统治地位的伦理学和神学传统的束缚，从历史与生活实践的经验出发，进行逻辑推理，
-揭示“典范的君主”(即一切剥削阶级统治者)所必需有的思想感情和性格。作者预见自己大胆提出创新的政治理论将引起强烈的反对。
+>①自本章开始，马基雅维里摆脱当时在欧洲占统治地位的伦理学和神学传统的束缚，从历史与生活实践的经验出发，进行逻辑推理，揭示“典范的君主”(即一切剥削阶级统治者)所必需有的思想感情和性格。作者预见自己大胆提出创新的政治理论将引起强烈的反对。
 
-②这里“许多人”，在古代，包括以《理想国》著名的柏拉图、以《政治论》著名的亚里士多德以及西塞罗等人；
-在中世纪，包括教父哲学代表人物奥古斯丁(354—430)、托马斯·阿奎那等人。
-马基雅维里反对柏拉图和亚里士多德，但是在国家论方面，特别是在《李维史论》中，又受亚里士多德影响。
+>②这里“许多人”，在古代，包括以《理想国》著名的柏拉图、以《政治论》著名的亚里士多德以及西塞罗等人；在中世纪，包括教父哲学代表人物奥古斯丁(354—430)、托马斯·阿奎那等人。马基雅维里反对柏拉图和亚里士多德，但是在国家论方面，特别是在《李维史论》中，又受亚里士多德影响。
 
 为此，我想把关于想象上的君主的事情撇在一边，而只是讨论确实存在的事情。我认为被人们评论的一切人——特别是君主，因为他的地位更高——都突出地具有某些引起赞扬或者招致责难的品质。这就是说有人被誉为慷慨，有人被贬为吝啬(这是使用托斯卡诺的用语，因为在我们的方言里面，贪婪的人还包括那些想靠掠夺取得财物的人，而我们称为吝啬的人是指那种不愿多使用自己东西的人)。有人被认为乐善好施，有人则被视为贪得无厌；有人被认为残忍成性，有人被认为慈悲为怀；有人被认为食言而肥，有人被认为言而有信；有人被认为软弱怯懦，有人则被认为勇猛强悍；有人被认为和蔼可亲，有人则被认为矜傲不逊；有人被认为淫荡好色，有人被认为纯洁自持；有人被认为诚恳，有人则被认为狡猾，有人被认为脾气僵硬，有人则被认为容易相与，有人被认为稳重，有人被认为轻浮，有人被认为是虔诚之士，有人则被认为无信仰之徒，如此等等。
 
