--- a/17 论残酷与仁慈.md
+++ b/17 论残酷与仁慈.md
@@ -3,12 +3,11 @@
 
 现在谈谈前面①列举的另一种品质。我认为，每一位君主都一定希望被人认为仁慈而不是被人认为残酷。可是他必须提防不要滥用这种仁慈。切萨雷·博尔贾是被人认为残酷的。尽管如此，他的残酷却给罗马尼阿带来了秩序，把它统一起来，并且恢复和平与忠诚。如果我们好好地考虑到这一点，就会认识到博尔贾比佛罗伦萨的人们仁慈得多了，因为后者为着避免残酷之名反而让皮斯托亚②被毁灭了。所以君主为着使自己的臣民团结一致和同心同德，对于残酷这个恶名就不应有所介意，因为除了极少数的事例之外，他比起那些由于过分仁慈、坐视发生混乱、凶杀、劫掠随之而起的人说来，是仁慈得多了，因为后者总是使整个社会受到损害，而君主执行刑罚不过损害个别人罢了。在所有的君主当中，新的君主由于新的国家充满着危险，要避免残酷之名是不可能的。维琪尔借迪多(Dido)的口说道：“严峻的形势、崭新的邦家，命我森严壁垒，警戒着海角天涯。”①
 
-①第15章列举关于引起赞扬或者责难的第二对品质，见第74页。
+>①第15章列举关于引起赞扬或者责难的第二对品质，见第74页。
 
-②皮斯托亚(Pistoia)在1501—1502年间由于坎切列里(C.Cancellieri)和潘恰蒂基(Panciatichi)两派之争，
-佛罗伦萨的统治者采取容忍态度，最后酿成流血、掠夺与破坏的悲惨状态。
+>②皮斯托亚(Pistoia)在1501—1502年间由于坎切列里(C.Cancellieri)和潘恰蒂基(Panciatichi)两派之争，佛罗伦萨的统治者采取容忍态度，最后酿成流血、掠夺与破坏的悲惨状态。
 
-①维琪尔(Virgilio，公元前70—19)，罗马诗人。此句引自所作被称为罗马的国民史诗《Aeneid》，
+>①维琪尔(Virgilio，公元前70—19)，罗马诗人。此句引自所作被称为罗马的国民史诗《Aeneid》，
 原文为拉丁文：“Res dura，et regni novitas me talia cogunt moliri，et late fines custode tueri.”
 
 但是，君主对于信任他人或者采取行动则务须慎重；不过，也不要杯弓蛇影，妄自惊慌。他应当慎思明辨，人道为怀，有节制地行事，以免由于过分自信而使自己流于轻率鲁莽，或者由于过分猜疑而使自己偏狭不能容人。
@@ -17,16 +16,15 @@
 
 但是，君主使人们畏惧自己的时候，应当这样做：即使自己不能赢得人们的爱戴，也要避免自己为人们所憎恨；因为一个人被人畏惧同时又不为人们所憎恨，这是可以很好地结合起来的。只要他对自己的公民和自己的属民的财产，对他们的妻女不染指，那就办得到了。而当他需要剥夺任何人的生命的时候，他必须有适当的辩解和明显的理由才这样做。但是头一件是，他务必不要碰他人的财产，因为人们忘记父亲之死比忘记遗产的丧失(perditadelpatrimonio)还来得快些①。再说，夺取他人财产的口实是永远好找的；一个人一旦开始以掠夺为生，他就常常找到侵占他人财产的口实。但是，与此相反，夺取他人生命的理由却更加难找了，而且很快就消失了。
 
-①这是东西方学者经常摘引，用以指责马基雅维里的一句话。
+>①这是东西方学者经常摘引，用以指责马基雅维里的一句话。
 
 可是，当君主和军队在一起并且指挥庞大的队伍的时候，他完全有必要置残酷之名于度外；因为如果没有这个残酷之名，他就决不能够使自己的军队保持团结和踊跃执行任何任务。下面这件事情可以列为汉尼拔②的惊人的行动之一。他率领一支由无数民族混合组成的大军，在外国的土地上作战，无论在恶运或者在好运的时候，也无论在军队当中或者对待君主，都不曾发生任何龃龉。这并不是由于别的原因，而只是由于他的残酷无情，同时他具有无限的能力，这就使他在士兵的心目中感到既可敬又可畏。但是假使他不是残酷无情的话，光靠他的其他能力是不能够产生这样的效果的。然而对此事缺乏深思熟虑的史学家们，一方面赞赏汉尼拔取得这样的成果，而另一方面却非难他取得这种成果的主要原因。
 
-②汉尼拔(Annibale，公元前247—183)，迦太基军队统帅，曾越过阿尔卑斯山入侵意大利，
-后失败逃亡(公元前196)，联合叙利亚国王对罗马人作战，失败后自杀。
+>②汉尼拔(Annibale，公元前247—183)，迦太基军队统帅，曾越过阿尔卑斯山入侵意大利，后失败逃亡(公元前196)，联合叙利亚国王对罗马人作战，失败后自杀。
 
 假如汉尼拔只有其他的能力，那确是不够的，关于这一点可以从西奇比奥①的事例中看到。西奇比奥不仅在他那个时代而且在全部史纪上都是一位罕有的人物；可是他的军队在西班牙背叛他，其原因不是别的，而只是由于他太仁慈了。他让自己的士兵享有同军纪不相容的更大的自由。为此，他在元老院受到法比奥·马西莫的弹劾；被称作罗马军队的败坏者。
 
-①西奇比奥(P.CorneliusScipione，公元前234—183)罗马军队统帅，曾在西班牙战胜汉尼拔。
+>①西奇比奥(P.CorneliusScipione，公元前234—183)罗马军队统帅，曾在西班牙战胜汉尼拔。
 
 洛克伦斯居民曾经遭受西奇比奥的一名使者的摧残，可是西奇比奥既没有替他们报仇雪耻，对于使者的横行霸道也没有加以惩罚。这完全是由于西奇比奥性情和易使然。因此，在元老院里想替他辩解的人就说，许多人懂得怎样不犯错误，比懂得怎样矫正别人的错误来得清楚。如果西奇比奥这样继续保持他的统帅地位，这种性情早晚要把他的名声和荣誉葬送掉。但是，由于他是在元老院的监督之下，他这种有害的品性不仅被掩盖起来，而且还使他获得荣誉。
 
