--- a/20 论有益与无益.md
+++ b/20 论有益与无益.md
@@ -12,37 +12,30 @@
 
 我们的祖先和那些被认为明智的人们常说，保有皮斯托亚必须利用党派之争，而保有皮萨却必须用城堡②。他们抱着这个想法，在他们所属的某些城市煽起纷争，以便易于保有它们。意大利过去保持着一定程度的均衡状态，在那种日子里，这当然是作得对的。但是我不相信这可以作为今日的一条箴规，因为我不相信这种分裂会有什么好处；恰恰相反，当敌人迫近的时候，那些内部分裂的城市就会立即丧失了，因为较弱的一派总是投靠外国的军队，而其余的部分就站不住脚了。
 
-①见第2章。
+>①见第2章。
 
-②皮斯托亚这个城市十多年分成两派即潘恰蒂奇派和坎切列里派，
-由于两派纷争频繁，导致流血、焚烧房屋、掠夺财产以及各种敌对行动
-其后佛罗伦萨人把两派的一些头头除掉或监禁，皮斯托亚才安定下来。因此马基雅维里认为，这两种政策都是没有用的。
-参看《李维史论》第3卷第27章。
+>②皮斯托亚这个城市十多年分成两派即潘恰蒂奇派和坎切列里派，由于两派纷争频繁，导致流血、焚烧房屋、掠夺财产以及各种敌对行动其后佛罗伦萨人把两派的一些头头除掉或监禁，皮斯托亚才安定下来。因此马基雅维里认为，这两种政策都是没有用的。参看《李维史论》第3卷第27章。
 
 我认为，威尼斯人基于前述的理由，在他们那些附庸城市中培植格尔夫和吉伯林两派①；虽然不让这些派别达到流血的地步，可是威尼斯人却在他们当中制造分歧，使那些市民们纠缠在自己的纠纷中，而不会团结一致反对威尼斯人。然而正如我们已经看见的，这样做后来的结果并不是对他们有利的，因为当威尼斯人在维拉战败之后，这些城市的属民当中的一部分人立即鼓起勇气，从威尼斯人手中夺取了整个国家。所以，这样一种方法表明君主的力量是薄弱的，因为在一个强有力的君主国里，绝不允许这样的分裂，这只是在和平时期有用，借此可以比较容易地驾驭属民；但是当战争到来的时候，这样的政策就表明是谬误的。
 
-①格尔夫(Guelfe)和吉伯林(Ghibelline)，这是第十二至第十五世纪意大利两大对立的政治派别。
-格尔夫党一般支持教会，此派以佛罗伦萨、波洛尼亚和米兰为代表；
-吉伯林派与前者对立，在意大利北部(包括皮萨、韦罗纳等地)，支持神圣罗马帝国的皇帝。
-最后，其斗争沦落成为单纯的宗派性的斗争。
+>①格尔夫(Guelfe)和吉伯林(Ghibelline)，这是第十二至第十五世纪意大利两大对立的政治派别。格尔夫党一般支持教会，此派以佛罗伦萨、波洛尼亚和米兰为代表；吉伯林派与前者对立，在意大利北部(包括皮萨、韦罗纳等地)，支持神圣罗马帝国的皇帝。最后，其斗争沦落成为单纯的宗派性的斗争。
 
 毫无疑问，当君主克服种种困难和对他的反抗时，他就变成伟大人物。特别是当幸运之神要使一位新君主成为伟大人物的时候，他比一位世袭君主更加需要获得盛名，幸运之神就给他树立敌人，并且使他们从事反对他的战争，以便使他可以有理由战胜他们，并且凭借他的敌人给他的梯子步步高升。因此许多人认为，一个英明的君主一有机会，就应该诡谲地树立某些仇敌，以便把它制服，从而使自己变得更加伟大。
 
 君主们，特别是新君主们，现在已经发现在他们国家肇始的时候，他们认为可疑的人们比在开始时他们信赖的人们更加忠诚，更加有用。潘多尔福·佩特鲁奇这位西耶纳的君主①治国，使用他过去怀疑的人比使用别的人来得多。但是这种事情我们不能够概而言之，因为这件事情按照具体情况而异。我要说的只是，那些在一个国家肇始的时候是敌对的人们，如果他们是需要获得君主的支持以保持其地位的人们，新君主往往很容易赢得他们；而且由于他们明白自己必须用行动来消除君主原先形成的对他们的坏印象，他们更加不得不竭志尽忠侍奉君主。因此，君主从他们那里得到的利益，常常比从另一些人那里得来的多，因为后一种人抱着过分的安全感侍奉君主，从而对君主的事情掉以轻心。
 
-①潘多尔福·佩特鲁奇(PandolfoPetrucci)杀其继父，于1502年成为西耶纳的统治者，1503年被驱逐，
+>①潘多尔福·佩特鲁奇(PandolfoPetrucci)杀其继父，于1502年成为西耶纳的统治者，1503年被驱逐，
 其后由于法国国王的支持再度执政。
 
 再说，由于这个问题的要求，对于那些依靠本地人的赞助而赢得新国家的君主，我不能不提醒他要很好地考虑是什么原因促使那些赞助他的人这样做的；如果这不是由于对君主的自然的情感，而只是由于他们对前政府不满意，那么新君主要很辛苦而且十分困难才能使他们继续成为自己的朋友，因为要满足他们是不可能的。如果借鉴古代和近代的事例，仔细考虑这件事的原因，他就可以看出，要赢得那些对前政府感到满足因此成为自己的敌人的人们作为朋友，比那些由于对前政府不满因此成为自己的朋友并赞助自己去征服它的人们是远为容易的！
 
 为了更稳固地保有国家，君主们建筑堡垒，作为对付那些企图反对自己的人们的缰绳和马勒，并且作为对付突然失宠的安全避难所，这已经成为习惯了。我赞赏这个方法，因为是自古以来就通用的。然而在我们时代里，已经看到梅塞尔·尼科洛·维泰利破坏了卡斯特洛市的两个堡垒以便保住那个国家①。乌尔比诺公爵圭多·乌巴尔多②回到他过去被切萨雷·博尔贾逐出的领地，他把该城的所有堡垒夷为平地；他认为如果没有这些堡垒，他再度丧失他的国家就更加困难了。而且，本蒂沃利奥回到波洛尼亚的时候③也采取了同样的作法。
 
-①梅塞尔·尼科洛·维泰利(MesserNicclòVitelli)，保罗和维泰洛佐的父亲，雇佣军队长，
-由于教皇西斯托四世死亡，1482年收复了卡斯特洛市(CittàdiCastello)，任该市的统治者。死于1486年。
+>①梅塞尔·尼科洛·维泰利(MesserNicclòVitelli)，保罗和维泰洛佐的父亲，雇佣军队长，由于教皇西斯托四世死亡，1482年收复了卡斯特洛市(CittàdiCastello)，任该市的统治者。死于1486年。
 
-②圭多·乌巴尔多(Guido.Ubaldo，1472—1508)，乌尔比诺公爵(ducadiUrbino)，1502年收复了乌尔比诺。1508年死亡。
+>②圭多·乌巴尔多(Guido.Ubaldo，1472—1508)，乌尔比诺公爵(ducadiUrbino)，1502年收复了乌尔比诺。1508年死亡。
 
-③本蒂沃利奥(Bentivoglio)于1506年被尤利奥二世所驱逐，于1511年重新恢复了统治权。
+>③本蒂沃利奥(Bentivoglio)于1506年被尤利奥二世所驱逐，于1511年重新恢复了统治权。
 
 因此，堡垒是否有益，要根据情势，在一种情况下对你是有利的，那末在另一种情况下则对你只是有害的。
 
@@ -50,6 +43,4 @@
 
 考虑了所有这一切事情，我称赞建筑堡垒的君主,也称赞不建筑城堡的君主；我非难那种依赖堡垒而认为来自人民的仇恨无足轻重的君主。
 
-①富尔利伯爵夫人(contessadiFurli，即CaterinaSforza)，
-当她的丈夫富尔利伯爵季罗拉莫(GirolamoRiario)在1488年被暗杀后，取得在富尔利的权力，
-直到1500年该城被切萨雷·博尔贾占领时为止。
+>①富尔利伯爵夫人(contessadiFurli，即CaterinaSforza)，当她的丈夫富尔利伯爵季罗拉莫(GirolamoRiario)在1488年被暗杀后，取得在富尔利的权力，直到1500年该城被切萨雷·博尔贾占领时为止。
