--- a/24 意大利的君主们为什么丧失了他们的国家.md
+++ b/24 意大利的君主们为什么丧失了他们的国家.md
@@ -4,13 +4,12 @@
 
 如果我们考虑一下我们这个时代在意大利丧失了他们的国家的那些统治者，象那波利国王、米兰公爵①以及其他的人们，我们在他们身上首先发现，由于上面已经详述的原因①，他们的军队都有一个共同的缺点；其次，我们看到，他们当中有些人或者是被人民敌视，或者是，尽管人民对他们友善，他们却不知道怎样使自己免于贵族为患。君主们如果没有这些缺点，只要他们有足够的力量能够保持一支作战的军队，他们就不会丧失他们的国家。
 
-①那波利国王是指阿拉冈的费尔迪南多(见第1章)。米兰公爵是指鲁多维科·莫罗(见第3章)。
+>①那波利国王是指阿拉冈的费尔迪南多(见第1章)。米兰公爵是指鲁多维科·莫罗(见第3章)。
 
-①见第12、13、14章。
+>①见第12、13、14章。
 
 马其顿的菲利普②，不是亚历山大的父亲，而是被蒂托·昆托(TitoQuinto)所战败的那一个人，如果同攻击他的罗马人和希腊人的强大相比，并不曾拥有一个强大的国家，但是他是一个勇武的人，他知道怎样结好于人民，怎样防止贵族为患。因此他对他们的战争维持了多年，尽管最后他失去了某些城市的统治权，但是他仍然保有他的王国。
 
-②马其顿的菲利普(FilippoMacedone)，是指菲利普五世。
-他在公元前三世纪初和二世纪末曾两次同罗马人作战多年，终于在公元前197年被战败。
+>②马其顿的菲利普(FilippoMacedone)，是指菲利普五世。他在公元前三世纪初和二世纪末曾两次同罗马人作战多年，终于在公元前197年被战败。
 
 因此我们的这些君主们，如果曾经享有王国多年而后来丧失了国家的话，他们不应咒骂命运而应该咒骂自己庸碌无能。在气候好的时候从不考虑可能出现的变化(在风和日丽的时候不想到暴风雨，这是人们的共同的短处)，到了有朝一日恶劣的气候来临的时候，他们就只想到逃跑而不是考虑自己怎样进行防卫。他们希望人民在惨遭征服者凌辱之余，召唤他们回来。如果再没有别的法子，这个主意也是好的。但是寄希望于此而忽视其他补救之道，这就糟透了，因为，任何人决不应该因为相信有人日后会使他复位，而自甘倒台。再说，那种情况或者是不会出现，或者是即使出现，它并不给你带来安全，因为这是一种懦夫的防卫之道，而不是依靠你自己。而只有依靠你自己和你自己的能力来保卫，才是可靠的、有把握的和持久的。
